@@ -17,24 +17,34 @@
 
 package org.apache.shardingsphere.mcp.core.completion;
 
+import org.apache.shardingsphere.mcp.support.database.metadata.TransactionCapability;
+
+import org.apache.shardingsphere.database.connector.core.metadata.identifier.IdentifierCasePolicyFactory;
+import org.apache.shardingsphere.infra.metadata.identifier.DatabaseIdentifierContext;
 import org.apache.shardingsphere.infra.spi.ShardingSphereServiceLoader;
-import org.apache.shardingsphere.mcp.api.protocol.exception.MCPInvalidRequestException;
-import org.apache.shardingsphere.mcp.core.completion.provider.MetadataCompletionProvider;
-import org.apache.shardingsphere.mcp.core.completion.provider.WorkflowPlanIdCompletionProvider;
+import org.apache.shardingsphere.mcp.api.capability.completion.MCPCompletionHandler;
+import org.apache.shardingsphere.mcp.api.capability.completion.MCPCompletionHandlerResult;
+import org.apache.shardingsphere.mcp.api.exception.MCPInvalidRequestException;
+import org.apache.shardingsphere.mcp.api.exception.MCPUnavailableException;
+import org.apache.shardingsphere.mcp.api.session.MCPSessionIdentity;
+import org.apache.shardingsphere.mcp.core.completion.handler.MetadataCompletionHandler;
+import org.apache.shardingsphere.mcp.core.completion.handler.WorkflowPlanIdCompletionHandler;
 import org.apache.shardingsphere.mcp.core.context.MCPRuntimeContext;
-import org.apache.shardingsphere.mcp.core.workflow.InMemoryWorkflowSessionContext;
-import org.apache.shardingsphere.mcp.support.completion.MCPCompletionCandidate;
-import org.apache.shardingsphere.mcp.support.completion.MCPCompletionProvider;
-import org.apache.shardingsphere.mcp.support.completion.MCPCompletionProviderResult;
-import org.apache.shardingsphere.mcp.support.completion.MCPCompletionRequestContext;
+import org.apache.shardingsphere.mcp.core.session.MCPSessionExecutionCoordinator;
+import org.apache.shardingsphere.mcp.core.session.MCPSessionManager;
+import org.apache.shardingsphere.mcp.core.session.MCPSessionNotExistedException;
+import org.apache.shardingsphere.mcp.api.capability.completion.MCPCompletionCandidate;
+import org.apache.shardingsphere.mcp.api.capability.completion.MCPCompletionRequest;
 import org.apache.shardingsphere.mcp.support.database.capability.MCPDatabaseCapabilityProvider;
 import org.apache.shardingsphere.mcp.support.database.metadata.jdbc.RuntimeDatabaseProfile;
-import org.apache.shardingsphere.mcp.support.descriptor.MCPCompletionTargetDescriptor;
+import org.apache.shardingsphere.mcp.api.capability.completion.MCPCompletionTargetDescriptor;
 import org.apache.shardingsphere.mcp.support.descriptor.MCPShardingSphereMetadataKeys;
-import org.apache.shardingsphere.mcp.support.workflow.MCPWorkflowHandlerContext;
+import org.apache.shardingsphere.mcp.support.MCPFeatureRequestContext;
 import org.apache.shardingsphere.mcp.support.workflow.WorkflowSessionContext;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowContextSnapshot;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowLifecycle;
+import org.apache.shardingsphere.mcp.support.security.MCPRuntimeProtectionPolicy;
+import org.apache.shardingsphere.mcp.api.MCPHandlerProvider;
 import org.junit.jupiter.api.Test;
 import org.mockito.MockedStatic;
 
@@ -44,13 +54,21 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.stream.IntStream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
@@ -59,81 +77,135 @@ class MCPCompletionServiceTest {
     
     @Test
     void assertCompleteDatabaseValues() {
-        MCPCompletionResult actual = complete(new InMemoryWorkflowSessionContext(), createDescriptor("inspect_metadata", "database", 1), "database", "", new LinkedHashMap<>());
+        MCPCompletionResult actual = complete(mock(WorkflowSessionContext.class), createDescriptor("inspect_metadata", "database", 1), "database", "", new LinkedHashMap<>());
         assertThat(actual.getValues(), is(List.of("logic_db")));
         assertThat(actual.getTotal(), is(2));
-        assertTrue(actual.isHasMore());
+        assertTrue(actual.hasMore());
         assertThat(actual.getMeta().get(MCPShardingSphereMetadataKeys.DIAGNOSTIC), is("ok"));
-        assertThat(actual.getMeta().get(MCPShardingSphereMetadataKeys.RETURNED_CANDIDATE_COUNT), is(1));
+        assertThat(actual.getMeta().get(MCPShardingSphereMetadataKeys.CANDIDATE_COUNT), is(2));
     }
     
     @Test
     void assertCompleteTableValuesWithMissingContextDiagnostic() {
-        MCPCompletionResult actual = complete(new InMemoryWorkflowSessionContext(), createDescriptor("inspect_metadata", "table", 50), "table", "order", new LinkedHashMap<>());
+        MCPCompletionResult actual = complete(mock(WorkflowSessionContext.class), createDescriptor("inspect_metadata", "table", 50), "table", "order", new LinkedHashMap<>());
         assertThat(actual.getValues(), is(List.of()));
         assertThat(actual.getMeta().get(MCPShardingSphereMetadataKeys.DIAGNOSTIC), is("missing_context"));
         assertThat(actual.getMeta().get(MCPShardingSphereMetadataKeys.MISSING_CONTEXT_ARGUMENTS), is(List.of("database", "schema")));
         assertThat(((Map<?, ?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.RECOVERY)).get("recovery_category"), is("missing_context"));
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.NEXT_ACTIONS)).get(0);
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.NEXT_ACTIONS)).getFirst();
         assertThat(actualNextAction.get("resource_uri"), is("shardingsphere://databases"));
     }
     
     @Test
     void assertCompleteMissingContextUsesProtocolReferenceType() {
-        MCPCompletionResult actual = complete(new InMemoryWorkflowSessionContext(), createDescriptor("inspect_metadata", "table", 50), "table", "order", new LinkedHashMap<>(),
-                List.of(new MissingContextCompletionProvider()));
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.NEXT_ACTIONS)).get(0);
-        assertThat(actualNextAction.get("reference_type"), is("ref/prompt"));
-        assertThat(actualNextAction.get("resume_target_type"), is("ref/prompt"));
+        MCPCompletionResult actual = complete(mock(WorkflowSessionContext.class), createDescriptor("inspect_metadata", "table", 50), "table", "order", new LinkedHashMap<>(),
+                List.of(new MissingContextCompletionHandler()));
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.NEXT_ACTIONS)).getFirst();
+        assertThat(actualNextAction.get("ref"), is(Map.of("type", "ref/prompt", "name", "inspect_metadata")));
+        assertThat(actualNextAction.get("resume_ref"), is(Map.of("type", "ref/prompt", "name", "inspect_metadata")));
     }
     
     @Test
     void assertCompletePlanIdsWithRecentPlanFirst() {
         WorkflowSessionContext workflowSessionContext = mock(WorkflowSessionContext.class);
-        when(workflowSessionContext.list("session-1")).thenReturn(List.of(
+        when(workflowSessionContext.list()).thenReturn(List.of(
                 createSnapshot("plan-old", WorkflowLifecycle.STATUS_PLANNED, Instant.parse("2026-05-04T11:00:00Z")),
                 createSnapshot("plan-new", WorkflowLifecycle.STATUS_PLANNED, Instant.parse("2026-05-04T12:00:00Z")),
                 createSnapshot("plan-clarifying", WorkflowLifecycle.STATUS_CLARIFYING, Instant.parse("2026-05-04T13:00:00Z"))));
         MCPCompletionResult actual = complete(workflowSessionContext, createDescriptor("recover_workflow", "plan_id", 50), "plan_id", "plan-", new LinkedHashMap<>());
         assertThat(actual.getValues(), is(List.of("plan-new", "plan-old")));
-        assertThat(((Map<?, ?>) ((List<?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.VALUE_DETAILS)).get(0)).get("rankingReason"), is("recent-plan-first-for-plan_id"));
+        assertThat(((Map<?, ?>) ((List<?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.VALUE_DETAILS)).getFirst()).get("rankingReason"), is("recent-plan-first-for-plan_id"));
     }
     
     @Test
     void assertCompleteCapsMaxValues() {
-        MCPCompletionResult actual = complete(new InMemoryWorkflowSessionContext(), createDescriptor("foo_prompt", "value", 101), "value", "value-", new LinkedHashMap<>(),
-                List.of(new SizedCompletionProvider()));
+        MCPCompletionResult actual = complete(mock(WorkflowSessionContext.class), createDescriptor("foo_prompt", "value", 101), "value", "value-", new LinkedHashMap<>(),
+                List.of(new SizedCompletionHandler()));
         assertThat(actual.getValues().size(), is(100));
         assertThat(actual.getTotal(), is(101));
-        assertTrue(actual.isHasMore());
+        assertTrue(actual.hasMore());
     }
     
     @Test
     void assertCompleteReplacesEmptyContextWithInferredContext() {
-        MCPCompletionResult actual = complete(new InMemoryWorkflowSessionContext(), createDescriptor("inspect_metadata", "table", 50), "table", "t_",
-                new LinkedHashMap<>(Map.of("database", "logic_db", "schema", "")), List.of(new InferredContextCompletionProvider()));
+        MCPCompletionResult actual = complete(mock(WorkflowSessionContext.class), createDescriptor("inspect_metadata", "table", 50), "table", "t_",
+                Map.of("database", "logic_db", "schema", ""), List.of(new InferredContextCompletionHandler()));
         assertThat(actual.getValues(), is(List.of("t_order")));
         assertThat(((Map<?, ?>) actual.getMeta().get(MCPShardingSphereMetadataKeys.CONTEXT_ARGUMENTS)).get("schema"), is("public"));
         assertThat(actual.getMeta().get(MCPShardingSphereMetadataKeys.DIAGNOSTIC), is("ok"));
     }
     
     @Test
-    void assertCompleteRejectsUndeclaredArgumentBeforeProviderInvocation() {
-        MCPInvalidRequestException actual = assertThrows(MCPInvalidRequestException.class, () -> complete(new InMemoryWorkflowSessionContext(),
-                createDescriptor("inspect_metadata", "database", 50), "table", "t_", new LinkedHashMap<>(), List.of(new UnexpectedCompletionProvider())));
+    void assertCompleteRejectsUndeclaredArgumentBeforeHandlerInvocation() {
+        MCPInvalidRequestException actual = assertThrows(MCPInvalidRequestException.class, () -> complete(mock(WorkflowSessionContext.class),
+                createDescriptor("inspect_metadata", "database", 50), "table", "t_", new LinkedHashMap<>(), List.of(new UnexpectedCompletionHandler())));
         assertThat(actual.getMessage(), is("Completion argument `table` is not declared for prompt `inspect_metadata`."));
+    }
+    
+    @Test
+    void assertCompleteRequiresActiveSession() {
+        MCPRuntimeContext runtimeContext = createRuntimeContext(mock(WorkflowSessionContext.class));
+        MCPCompletionService completionService = createCompletionService(runtimeContext, List.of(new SizedCompletionHandler()));
+        assertThrows(MCPSessionNotExistedException.class,
+                () -> completionService.complete("missing-session", createDescriptor("foo_prompt", "value", 50), "value", "", new LinkedHashMap<>()));
+    }
+    
+    @Test
+    void assertResetRateLimitWhenSessionCloses() {
+        String previous = System.getProperty(MCPRuntimeProtectionPolicy.MAX_COMPLETION_REQUESTS_PER_MINUTE_PROPERTY);
+        try {
+            System.setProperty(MCPRuntimeProtectionPolicy.MAX_COMPLETION_REQUESTS_PER_MINUTE_PROPERTY, "1");
+            MCPRuntimeContext runtimeContext = createRuntimeContext(mock(WorkflowSessionContext.class));
+            MCPCompletionService completionService = createCompletionService(runtimeContext, List.of(new SizedCompletionHandler()));
+            MCPCompletionTargetDescriptor descriptor = createDescriptor("foo_prompt", "value", 50);
+            completionService.complete("session-1", descriptor, "value", "", new LinkedHashMap<>());
+            assertThrows(MCPUnavailableException.class, () -> completionService.complete("session-1", descriptor, "value", "", new LinkedHashMap<>()));
+            new MCPSessionExecutionCoordinator(runtimeContext.getSessionManager()).closeSession("session-1");
+            runtimeContext.getSessionManager().createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
+            assertDoesNotThrow(() -> completionService.complete("session-1", descriptor, "value", "", new LinkedHashMap<>()));
+        } finally {
+            restoreProperty(MCPRuntimeProtectionPolicy.MAX_COMPLETION_REQUESTS_PER_MINUTE_PROPERTY, previous);
+        }
+    }
+    
+    @Test
+    void assertHandlerRunsOutsideSessionLock() throws InterruptedException, ExecutionException, TimeoutException {
+        BlockingCompletionHandler handler = new BlockingCompletionHandler();
+        MCPRuntimeContext runtimeContext = createRuntimeContext(mock(WorkflowSessionContext.class));
+        MCPCompletionService completionService = createCompletionService(runtimeContext, List.of(handler));
+        ExecutorService executorService = Executors.newFixedThreadPool(2);
+        try {
+            Future<MCPCompletionResult> completionFuture = executorService.submit(
+                    () -> completionService.complete("session-1", createDescriptor("foo_prompt", "value", 50), "value", "", new LinkedHashMap<>()));
+            assertTrue(handler.awaitStarted());
+            assertFalse(completionFuture.isDone());
+            Future<String> sessionLockFuture = executorService.submit(
+                    () -> new MCPSessionExecutionCoordinator(runtimeContext.getSessionManager()).executeWithSessionLock("session-1", () -> "available"));
+            assertThat(sessionLockFuture.get(1L, TimeUnit.SECONDS), is("available"));
+            handler.release();
+            completionFuture.get(1L, TimeUnit.SECONDS);
+        } finally {
+            handler.release();
+            executorService.shutdownNow();
+        }
     }
     
     private MCPCompletionResult complete(final WorkflowSessionContext workflowSessionContext, final MCPCompletionTargetDescriptor descriptor, final String argumentName, final String prefix,
                                          final Map<String, String> contextArguments) {
-        return complete(workflowSessionContext, descriptor, argumentName, prefix, contextArguments, List.of(new MetadataCompletionProvider(), new WorkflowPlanIdCompletionProvider()));
+        return complete(workflowSessionContext, descriptor, argumentName, prefix, contextArguments, List.of(new MetadataCompletionHandler(), new WorkflowPlanIdCompletionHandler()));
     }
     
     private MCPCompletionResult complete(final WorkflowSessionContext workflowSessionContext, final MCPCompletionTargetDescriptor descriptor, final String argumentName, final String prefix,
-                                         final Map<String, String> contextArguments, final Collection<? extends MCPCompletionProvider<?>> completionProviders) {
+                                         final Map<String, String> contextArguments, final Collection<MCPCompletionHandler<?>> completionHandlers) {
+        return createCompletionService(createRuntimeContext(workflowSessionContext), completionHandlers).complete("session-1", descriptor, argumentName, prefix, contextArguments);
+    }
+    
+    private MCPCompletionService createCompletionService(final MCPRuntimeContext runtimeContext, final Collection<MCPCompletionHandler<?>> completionHandlers) {
         try (MockedStatic<ShardingSphereServiceLoader> mocked = mockStatic(ShardingSphereServiceLoader.class)) {
-            mocked.when(() -> ShardingSphereServiceLoader.getServiceInstances(MCPCompletionProvider.class)).thenReturn(completionProviders);
-            return new MCPCompletionService(createRuntimeContext(workflowSessionContext)).complete("session-1", descriptor, argumentName, prefix, contextArguments);
+            MCPHandlerProvider handlerProvider = mock(MCPHandlerProvider.class);
+            when(handlerProvider.getCompletionHandlers()).thenReturn(completionHandlers);
+            mocked.when(() -> ShardingSphereServiceLoader.getServiceInstances(MCPHandlerProvider.class)).thenReturn(List.of(handlerProvider));
+            return new MCPCompletionService(runtimeContext);
         }
     }
     
@@ -144,12 +216,16 @@ class MCPCompletionServiceTest {
     private MCPRuntimeContext createRuntimeContext(final WorkflowSessionContext workflowSessionContext) {
         MCPDatabaseCapabilityProvider databaseCapabilityProvider = mock(MCPDatabaseCapabilityProvider.class);
         when(databaseCapabilityProvider.getDatabaseProfiles()).thenReturn(List.of(
-                new RuntimeDatabaseProfile("logic_db", "MySQL", "8.0"),
-                new RuntimeDatabaseProfile("warehouse", "PostgreSQL", "16")));
-        MCPRuntimeContext result = mock(MCPRuntimeContext.class, RETURNS_DEEP_STUBS);
+                new RuntimeDatabaseProfile("logic_db", "FixtureDB", "1.0", TransactionCapability.LOCAL_WITH_SAVEPOINT,
+                        new DatabaseIdentifierContext(IdentifierCasePolicyFactory.newInsensitivePolicySet())),
+                new RuntimeDatabaseProfile("warehouse", "FixtureWarehouseDB", "2.0", TransactionCapability.LOCAL_WITH_SAVEPOINT,
+                        new DatabaseIdentifierContext(IdentifierCasePolicyFactory.newInsensitivePolicySet()))));
+        MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
+        MCPRuntimeContext result = mock(MCPRuntimeContext.class);
         when(result.getDatabaseCapabilityProvider()).thenReturn(databaseCapabilityProvider);
-        when(result.getWorkflowSessionContext()).thenReturn(workflowSessionContext);
-        when(result.getSessionManager().getTransactionResourceManager().getRuntimeDatabases()).thenReturn(Collections.emptyMap());
+        when(result.getWorkflowSessionContext("session-1")).thenReturn(workflowSessionContext);
+        when(result.getSessionManager()).thenReturn(sessionManager);
         return result;
     }
     
@@ -161,21 +237,29 @@ class MCPCompletionServiceTest {
         return result;
     }
     
-    private static final class SizedCompletionProvider implements MCPCompletionProvider<MCPWorkflowHandlerContext> {
+    private void restoreProperty(final String propertyName, final String previous) {
+        if (null == previous) {
+            System.clearProperty(propertyName);
+        } else {
+            System.setProperty(propertyName, previous);
+        }
+    }
+    
+    private static final class SizedCompletionHandler implements MCPCompletionHandler<MCPFeatureRequestContext> {
         
         @Override
-        public Class<MCPWorkflowHandlerContext> getContextType() {
-            return MCPWorkflowHandlerContext.class;
+        public Class<MCPFeatureRequestContext> getContextType() {
+            return MCPFeatureRequestContext.class;
         }
         
         @Override
-        public boolean supports(final MCPCompletionRequestContext requestContext) {
-            return "value".equals(requestContext.getArgumentName());
+        public boolean supports(final MCPCompletionRequest request) {
+            return "value".equals(request.getArgumentName());
         }
         
         @Override
-        public MCPCompletionProviderResult complete(final MCPWorkflowHandlerContext handlerContext, final MCPCompletionRequestContext requestContext) {
-            return new MCPCompletionProviderResult(createCandidates());
+        public MCPCompletionHandlerResult complete(final MCPFeatureRequestContext handlerContext, final MCPCompletionRequest request) {
+            return new MCPCompletionHandlerResult(createCandidates());
         }
         
         private List<MCPCompletionCandidate> createCandidates() {
@@ -184,57 +268,96 @@ class MCPCompletionServiceTest {
         }
     }
     
-    private static final class InferredContextCompletionProvider implements MCPCompletionProvider<MCPWorkflowHandlerContext> {
+    private static final class InferredContextCompletionHandler implements MCPCompletionHandler<MCPFeatureRequestContext> {
         
         @Override
-        public Class<MCPWorkflowHandlerContext> getContextType() {
-            return MCPWorkflowHandlerContext.class;
+        public Class<MCPFeatureRequestContext> getContextType() {
+            return MCPFeatureRequestContext.class;
         }
         
         @Override
-        public boolean supports(final MCPCompletionRequestContext requestContext) {
-            return "table".equals(requestContext.getArgumentName());
+        public boolean supports(final MCPCompletionRequest request) {
+            return "table".equals(request.getArgumentName());
         }
         
         @Override
-        public MCPCompletionProviderResult complete(final MCPWorkflowHandlerContext handlerContext, final MCPCompletionRequestContext requestContext) {
-            return new MCPCompletionProviderResult(List.of(new MCPCompletionCandidate("t_order", "logical table", "test-provider")), Map.of("schema", "public"), List.of(), "");
-        }
-    }
-    
-    private static final class MissingContextCompletionProvider implements MCPCompletionProvider<MCPWorkflowHandlerContext> {
-        
-        @Override
-        public Class<MCPWorkflowHandlerContext> getContextType() {
-            return MCPWorkflowHandlerContext.class;
-        }
-        
-        @Override
-        public boolean supports(final MCPCompletionRequestContext requestContext) {
-            return "table".equals(requestContext.getArgumentName());
-        }
-        
-        @Override
-        public MCPCompletionProviderResult complete(final MCPWorkflowHandlerContext handlerContext, final MCPCompletionRequestContext requestContext) {
-            return new MCPCompletionProviderResult(List.of(), Map.of(), List.of("database"), "");
+        public MCPCompletionHandlerResult complete(final MCPFeatureRequestContext handlerContext, final MCPCompletionRequest request) {
+            return new MCPCompletionHandlerResult(List.of(new MCPCompletionCandidate("t_order", "logical table", "test-provider")), Map.of("schema", "public"), List.of(), "");
         }
     }
     
-    private static final class UnexpectedCompletionProvider implements MCPCompletionProvider<MCPWorkflowHandlerContext> {
+    private static final class MissingContextCompletionHandler implements MCPCompletionHandler<MCPFeatureRequestContext> {
         
         @Override
-        public Class<MCPWorkflowHandlerContext> getContextType() {
-            return MCPWorkflowHandlerContext.class;
+        public Class<MCPFeatureRequestContext> getContextType() {
+            return MCPFeatureRequestContext.class;
         }
         
         @Override
-        public boolean supports(final MCPCompletionRequestContext requestContext) {
-            throw new AssertionError("Provider should not be invoked for undeclared completion arguments.");
+        public boolean supports(final MCPCompletionRequest request) {
+            return "table".equals(request.getArgumentName());
         }
         
         @Override
-        public MCPCompletionProviderResult complete(final MCPWorkflowHandlerContext handlerContext, final MCPCompletionRequestContext requestContext) {
-            throw new AssertionError("Provider should not be invoked for undeclared completion arguments.");
+        public MCPCompletionHandlerResult complete(final MCPFeatureRequestContext handlerContext, final MCPCompletionRequest request) {
+            return new MCPCompletionHandlerResult(List.of(), Map.of(), List.of("database"), "");
+        }
+    }
+    
+    private static final class UnexpectedCompletionHandler implements MCPCompletionHandler<MCPFeatureRequestContext> {
+        
+        @Override
+        public Class<MCPFeatureRequestContext> getContextType() {
+            return MCPFeatureRequestContext.class;
+        }
+        
+        @Override
+        public boolean supports(final MCPCompletionRequest request) {
+            throw new AssertionError("Handler should not be invoked for undeclared completion arguments.");
+        }
+        
+        @Override
+        public MCPCompletionHandlerResult complete(final MCPFeatureRequestContext handlerContext, final MCPCompletionRequest request) {
+            throw new AssertionError("Handler should not be invoked for undeclared completion arguments.");
+        }
+    }
+    
+    private static final class BlockingCompletionHandler implements MCPCompletionHandler<MCPFeatureRequestContext> {
+        
+        private final CountDownLatch started = new CountDownLatch(1);
+        
+        private final CountDownLatch released = new CountDownLatch(1);
+        
+        @Override
+        public Class<MCPFeatureRequestContext> getContextType() {
+            return MCPFeatureRequestContext.class;
+        }
+        
+        @Override
+        public boolean supports(final MCPCompletionRequest request) {
+            return "value".equals(request.getArgumentName());
+        }
+        
+        @Override
+        public MCPCompletionHandlerResult complete(final MCPFeatureRequestContext handlerContext, final MCPCompletionRequest request) {
+            started.countDown();
+            try {
+                if (!released.await(1L, TimeUnit.SECONDS)) {
+                    throw new IllegalStateException("Timed out while waiting for test coordination.");
+                }
+            } catch (final InterruptedException ex) {
+                Thread.currentThread().interrupt();
+                throw new IllegalStateException(ex);
+            }
+            return new MCPCompletionHandlerResult(List.of());
+        }
+        
+        private boolean awaitStarted() throws InterruptedException {
+            return started.await(1L, TimeUnit.SECONDS);
+        }
+        
+        private void release() {
+            released.countDown();
         }
     }
 }
