@@ -17,13 +17,12 @@
 
 package org.apache.shardingsphere.mcp.feature.encrypt.tool.service;
 
-import org.apache.shardingsphere.mcp.api.protocol.exception.MCPInvalidRequestException;
+import org.apache.shardingsphere.mcp.api.exception.MCPInvalidRequestException;
 import org.apache.shardingsphere.mcp.feature.encrypt.tool.model.EncryptWorkflowRequest;
 import org.apache.shardingsphere.mcp.support.workflow.model.RuleArtifact;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -37,28 +36,14 @@ class EncryptRuleDistSQLPlanningServiceTest {
     @Test
     void assertPlanEncryptRuleWithCreate() {
         EncryptWorkflowRequest request = createRequest("create", true, true);
-        List<RuleArtifact> actual = service.planEncryptRule(request, List.of(), "MySQL");
+        List<RuleArtifact> actual = service.planEncryptRule(request);
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getOperationType(), is("create"));
-        assertTrue(actual.get(0).getSql().startsWith("CREATE ENCRYPT RULE orders"));
-        assertTrue(actual.get(0).getSql().contains("NAME=phone"));
-        assertTrue(actual.get(0).getSql().contains("CIPHER=phone_cipher"));
-        assertTrue(actual.get(0).getSql().contains("ASSISTED_QUERY_COLUMN=phone_assisted_query"));
-        assertTrue(actual.get(0).getSql().contains("LIKE_QUERY_COLUMN=phone_like_query"));
-    }
-    
-    @Test
-    void assertPlanEncryptRuleWithExistingRules() {
-        EncryptWorkflowRequest request = createRequest("alter", true, false);
-        List<RuleArtifact> actual = service.planEncryptRule(request, List.of(
-                Map.of("logic_column", "phone", "cipher_column", "old_cipher", "encryptor_type", "AES", "encryptor_props", "aes-key-value=old"),
-                Map.of("logic_column", "email", "cipher_column", "email_cipher", "encryptor_type", "AES", "encryptor_props", "aes-key-value=old")), "MySQL");
-        assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getOperationType(), is("alter"));
-        assertTrue(actual.get(0).getSql().startsWith("ALTER ENCRYPT RULE orders"));
-        assertTrue(actual.get(0).getSql().contains("NAME=email"));
-        assertTrue(actual.get(0).getSql().contains("NAME=phone"));
-        assertTrue(actual.get(0).getSql().contains("CIPHER=phone_cipher"));
+        assertThat(actual.getFirst().getOperationType(), is("create"));
+        assertTrue(actual.getFirst().getSql().startsWith("CREATE ENCRYPT RULE `orders`"));
+        assertTrue(actual.getFirst().getSql().contains("NAME=`phone`"));
+        assertTrue(actual.getFirst().getSql().contains("CIPHER=`phone_cipher`"));
+        assertTrue(actual.getFirst().getSql().contains("ASSISTED_QUERY_COLUMN=`phone_assisted_query`"));
+        assertTrue(actual.getFirst().getSql().contains("LIKE_QUERY_COLUMN=`phone_like_query`"));
     }
     
     @Test
@@ -66,8 +51,8 @@ class EncryptRuleDistSQLPlanningServiceTest {
         EncryptWorkflowRequest request = createRequest("create", false, false);
         request.setAlgorithmType("AES'X");
         request.getPrimaryAlgorithmProperties().put("aes-key-value", "s'1");
-        List<RuleArtifact> actual = service.planEncryptRule(request, List.of(), "MySQL");
-        assertTrue(actual.get(0).getSql().contains("TYPE(NAME='aes''x', PROPERTIES('aes-key-value'='s''1'))"));
+        List<RuleArtifact> actual = service.planEncryptRule(request);
+        assertTrue(actual.getFirst().getSql().contains("TYPE(NAME='aes''x', PROPERTIES('aes-key-value'='s''1'))"));
     }
     
     @Test
@@ -76,26 +61,51 @@ class EncryptRuleDistSQLPlanningServiceTest {
         request.setTable("order detail");
         request.setColumn("Phone Number");
         request.getOptions().setCipherColumnName("Phone Number Cipher");
-        List<RuleArtifact> actual = service.planEncryptRule(request, List.of(), "MySQL");
-        assertTrue(actual.get(0).getSql().startsWith("CREATE ENCRYPT RULE `order detail`"));
-        assertTrue(actual.get(0).getSql().contains("NAME=`Phone Number`"));
-        assertTrue(actual.get(0).getSql().contains("CIPHER=`Phone Number Cipher`"));
+        List<RuleArtifact> actual = service.planEncryptRule(request);
+        assertTrue(actual.getFirst().getSql().startsWith("CREATE ENCRYPT RULE `order detail`"));
+        assertTrue(actual.getFirst().getSql().contains("NAME=`Phone Number`"));
+        assertTrue(actual.getFirst().getSql().contains("CIPHER=`Phone Number Cipher`"));
     }
     
     @Test
     void assertPlanEncryptRuleFormatsReservedIdentifiers() {
         EncryptWorkflowRequest request = createRequest("create", false, false);
         request.setTable("key");
-        List<RuleArtifact> actual = service.planEncryptRule(request, List.of(), "MySQL");
-        assertTrue(actual.get(0).getSql().startsWith("CREATE ENCRYPT RULE `key`"));
-        assertTrue(actual.get(0).getSql().contains("NAME=phone"));
+        List<RuleArtifact> actual = service.planEncryptRule(request);
+        assertTrue(actual.getFirst().getSql().startsWith("CREATE ENCRYPT RULE `key`"));
+        assertTrue(actual.getFirst().getSql().contains("NAME=`phone`"));
+    }
+    
+    @Test
+    void assertPlanEncryptRuleFormatsReservedColumnIdentifier() {
+        EncryptWorkflowRequest request = createRequest("create", false, false);
+        request.setTable("t_user");
+        request.setColumn("name");
+        request.getOptions().setCipherColumnName("name_cipher");
+        List<RuleArtifact> actual = service.planEncryptRule(request);
+        assertTrue(actual.getFirst().getSql().startsWith("CREATE ENCRYPT RULE `t_user`"));
+        assertTrue(actual.getFirst().getSql().contains("NAME=`name`"));
+        assertTrue(actual.getFirst().getSql().contains("CIPHER=`name_cipher`"));
+        assertTrue(actual.getFirst().getSql().contains("TYPE(NAME='aes'"));
+    }
+    
+    @Test
+    void assertPlanEncryptRuleFormatsReservedQueryColumnIdentifiers() {
+        EncryptWorkflowRequest request = createRequest("create", true, true);
+        request.getOptions().setCipherColumnName("cipher");
+        request.getOptions().setAssistedQueryColumnName("order");
+        request.getOptions().setLikeQueryColumnName("type");
+        List<RuleArtifact> actual = service.planEncryptRule(request);
+        assertTrue(actual.getFirst().getSql().contains("CIPHER=`cipher`"));
+        assertTrue(actual.getFirst().getSql().contains("ASSISTED_QUERY_COLUMN=`order`"));
+        assertTrue(actual.getFirst().getSql().contains("LIKE_QUERY_COLUMN=`type`"));
     }
     
     @Test
     void assertPlanEncryptRuleRejectsLineTerminatorColumn() {
         EncryptWorkflowRequest request = createRequest("create", false, false);
         request.setColumn("phone\ndrop");
-        MCPInvalidRequestException actualException = assertThrows(MCPInvalidRequestException.class, () -> service.planEncryptRule(request, List.of(), "MySQL"));
+        MCPInvalidRequestException actualException = assertThrows(MCPInvalidRequestException.class, () -> service.planEncryptRule(request));
         assertThat(actualException.getMessage(), is("column `phone\ndrop` contains unsupported characters that cannot be rendered as a reviewable SQL identifier."));
     }
     
@@ -103,57 +113,10 @@ class EncryptRuleDistSQLPlanningServiceTest {
     void assertPlanEncryptDropRuleWithoutRemainingColumns() {
         EncryptWorkflowRequest request = createRequest("drop", false, false);
         request.getOptions().setCipherColumnName("");
-        List<RuleArtifact> actual = service.planEncryptDropRule(request, List.of(Map.of("logic_column", "phone", "cipher_column", "phone_cipher")), "MySQL");
+        List<RuleArtifact> actual = service.planEncryptDropRule(request);
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getOperationType(), is("drop"));
-        assertThat(actual.get(0).getSql(), is("DROP ENCRYPT RULE orders"));
-    }
-    
-    @Test
-    void assertPlanEncryptDropRuleWithRemainingColumns() {
-        EncryptWorkflowRequest request = createRequest("drop", false, false);
-        request.getOptions().setCipherColumnName("");
-        List<RuleArtifact> actual = service.planEncryptDropRule(request, List.of(
-                Map.of("logic_column", "phone", "cipher_column", "phone_cipher"),
-                Map.of("logic_column", "email", "cipher_column", "email_cipher", "encryptor_type", "AES", "encryptor_props", "aes-key-value=old")), "MySQL");
-        assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getOperationType(), is("drop"));
-        assertTrue(actual.get(0).getSql().startsWith("ALTER ENCRYPT RULE orders"));
-        assertTrue(actual.get(0).getSql().contains("NAME=email"));
-        assertTrue(actual.get(0).getSql().contains("CIPHER=email_cipher"));
-    }
-    
-    @Test
-    void assertPlanEncryptDropRulePreservesCaseSensitiveSiblingColumn() {
-        EncryptWorkflowRequest request = createRequest("drop", false, false);
-        request.setColumn("\"Phone\"");
-        List<RuleArtifact> actual = service.planEncryptDropRule(request, List.of(
-                Map.of("logic_column", "Phone", "cipher_column", "Phone_cipher"),
-                Map.of("logic_column", "phone", "cipher_column", "phone_cipher", "encryptor_type", "AES", "encryptor_props", "aes-key-value=old")), "PostgreSQL");
-        assertThat(actual.size(), is(1));
-        assertTrue(actual.get(0).getSql().startsWith("ALTER ENCRYPT RULE orders"));
-        assertTrue(actual.get(0).getSql().contains("NAME=phone"));
-        assertTrue(actual.get(0).getSql().contains("CIPHER=phone_cipher"));
-    }
-    
-    @Test
-    void assertPlanEncryptDropRuleMatchesPostgreSQLUnquotedColumn() {
-        EncryptWorkflowRequest request = createRequest("drop", false, false);
-        request.setColumn("Phone");
-        List<RuleArtifact> actual = service.planEncryptDropRule(request, List.of(Map.of("logic_column", "phone", "cipher_column", "phone_cipher")), "PostgreSQL");
-        assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getOperationType(), is("drop"));
-        assertThat(actual.get(0).getSql(), is("DROP ENCRYPT RULE orders"));
-    }
-    
-    @Test
-    void assertPlanEncryptDropRuleMatchesCaseInsensitiveColumn() {
-        EncryptWorkflowRequest request = createRequest("drop", false, false);
-        request.setColumn("Phone");
-        List<RuleArtifact> actual = service.planEncryptDropRule(request, List.of(Map.of("logic_column", "phone", "cipher_column", "phone_cipher")), "MySQL");
-        assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getOperationType(), is("drop"));
-        assertThat(actual.get(0).getSql(), is("DROP ENCRYPT RULE orders"));
+        assertThat(actual.getFirst().getOperationType(), is("drop"));
+        assertThat(actual.getFirst().getSql(), is("DROP ENCRYPT RULE `orders`"));
     }
     
     private EncryptWorkflowRequest createRequest(final String operationType, final boolean equalityFilter, final boolean likeQuery) {
