@@ -23,11 +23,8 @@ import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.client.LLMChatMes
 import org.apache.shardingsphere.test.e2e.mcp.llm.scenario.LLME2EScenario;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionActionNames;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionTraceRecord;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.is;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
@@ -35,6 +32,8 @@ import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
@@ -50,7 +49,7 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(2);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "tool-call-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload("NaN"));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
@@ -66,7 +65,7 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(2);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "tool-call-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(Map.of("result_kind", "update_count", "update_count", 1));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
@@ -81,7 +80,7 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
     void assertRunWithMissingRequiredToolCoverage() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(1);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
@@ -96,37 +95,35 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
     void assertRunNamesRemainingToolsWhenCoverageIsMissing() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(2);
-        ArgumentCaptor<List<LLMChatMessage>> actualMessages = createChatMessagesCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response-1"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        verify(getLLMChatClient(), times(2)).complete(actualMessages.capture(), anyList(), eq("required"), eq(false));
-        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.getAllValues().get(1);
-        assertThat(actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent(),
+        List<List<LLMChatMessage>> actualMessages = captureAutoChatMessages(2);
+        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.get(1);
+        assertThat(actualSecondTurnMessages.getLast().getContent(),
                 containsString("Remaining required MCP tools: database_gateway_execute_query"));
-        assertThat(actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent(), containsString("actual MCP tool_call"));
-        assertThat(actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent(), containsString("database `logic_db`"));
-        assertThat(actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent(), containsString("schema `public`"));
-        assertThat(actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent(), containsString("sql `SELECT COUNT(*) AS total_orders FROM orders`"));
+        assertThat(actualSecondTurnMessages.getLast().getContent(), containsString("actual MCP tool_call"));
+        assertThat(actualSecondTurnMessages.getLast().getContent(), containsString("database `logic_db`"));
+        assertThat(actualSecondTurnMessages.getLast().getContent(), containsString("schema `public`"));
+        assertThat(actualSecondTurnMessages.getLast().getContent(), containsString("sql `SELECT COUNT(*) AS total_orders FROM orders`"));
     }
     
     @Test
     void assertRunNamesExactResourceUriWhenResourceCoverageIsMissing() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of(MCPInteractionActionNames.READ_RESOURCE));
         LLMMCPConversationRunner actualRunner = createRunner(2);
-        ArgumentCaptor<List<LLMChatMessage>> actualMessages = createChatMessagesCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response-1"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        verify(getLLMChatClient(), times(2)).complete(actualMessages.capture(), anyList(), eq("required"), eq(false));
-        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.getAllValues().get(1);
-        String actualRetryInstruction = actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent();
+        List<List<LLMChatMessage>> actualMessages = captureAutoChatMessages(2);
+        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.get(1);
+        String actualRetryInstruction = actualSecondTurnMessages.getLast().getContent();
         assertThat(actualRetryInstruction, containsString("Remaining required MCP tools: mcp_read_resource"));
         assertThat(actualRetryInstruction, containsString("exact shardingsphere:// URI"));
         assertThat(actualRetryInstruction, containsString("do not invent abbreviated URI strings"));
@@ -136,16 +133,15 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
     void assertRunNamesPreviewModeWhenUpdateCoverageIsMissing() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_update"));
         LLMMCPConversationRunner actualRunner = createRunner(2);
-        ArgumentCaptor<List<LLMChatMessage>> actualMessages = createChatMessagesCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response-1"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        verify(getLLMChatClient(), times(2)).complete(actualMessages.capture(), anyList(), eq("required"), eq(false));
-        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.getAllValues().get(1);
-        String actualRetryInstruction = actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent();
+        List<List<LLMChatMessage>> actualMessages = captureAutoChatMessages(2);
+        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.get(1);
+        String actualRetryInstruction = actualSecondTurnMessages.getLast().getContent();
         assertThat(actualRetryInstruction, containsString("Remaining required MCP tools: database_gateway_execute_update"));
         assertThat(actualRetryInstruction, containsString("database `logic_db`"));
         assertThat(actualRetryInstruction, containsString("schema `public`"));
@@ -157,37 +153,35 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
     void assertRunNamesPlanIdRuleWhenPlanningCoverageIsMissing() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_plan_mask_rule"));
         LLMMCPConversationRunner actualRunner = createRunner(2);
-        ArgumentCaptor<List<LLMChatMessage>> actualMessages = createChatMessagesCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response-1"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        verify(getLLMChatClient(), times(2)).complete(actualMessages.capture(), anyList(), eq("required"), eq(false));
-        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.getAllValues().get(1);
-        String actualRetryInstruction = actualSecondTurnMessages.get(actualSecondTurnMessages.size() - 1).getContent();
+        List<List<LLMChatMessage>> actualMessages = captureAutoChatMessages(2);
+        List<LLMChatMessage> actualSecondTurnMessages = actualMessages.get(1);
+        String actualRetryInstruction = actualSecondTurnMessages.getLast().getContent();
         assertThat(actualRetryInstruction, containsString("Remaining required MCP tools: database_gateway_plan_mask_rule"));
         assertThat(actualRetryInstruction, containsString("For a new database_gateway_plan_* call"));
         assertThat(actualRetryInstruction, containsString("omit plan_id"));
     }
     
     @Test
-    void assertRunRemovesInitialPlanningPlanId() throws IOException, InterruptedException {
+    void assertRunKeepsInitialPlanningPlanId() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_plan_mask_rule"));
         LLMMCPConversationRunner actualRunner = createRunner(1);
         Map<String, Object> rawPlanArguments = Map.of("plan_id", "1", "database", DATABASE_NAME, "schema", SCHEMA_NAME, "table", TABLE_NAME, "column", "status");
-        Map<String, Object> expectedPlanArguments = Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "table", TABLE_NAME, "column", "status");
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_plan_mask_rule", rawPlanArguments, "plan-response"));
-        when(getMCPInteractionClient().call("database_gateway_plan_mask_rule", expectedPlanArguments)).thenReturn(Map.of("plan_id", "plan-1"));
+        when(getMCPInteractionClient().call("database_gateway_plan_mask_rule", rawPlanArguments)).thenReturn(Map.of("plan_id", "plan-1"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        assertThat(actual.getInteractionTrace().get(0).getArguments(), is(expectedPlanArguments));
-        assertThat(actual.getInteractionTrace().get(0).getActionOrigin(), is(MCPInteractionTraceRecord.HARNESS_ARGUMENT_NORMALIZATION_ORIGIN));
-        verify(getMCPInteractionClient()).call("database_gateway_plan_mask_rule", expectedPlanArguments);
+        assertThat(actual.getInteractionTrace().getFirst().getArguments(), is(rawPlanArguments));
+        assertThat(actual.getInteractionTrace().getFirst().getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        verify(getMCPInteractionClient()).call("database_gateway_plan_mask_rule", rawPlanArguments);
     }
     
     @Test
@@ -196,9 +190,8 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         LLMMCPConversationRunner actualRunner = createRunner(2);
         Map<String, Object> initialPlanArguments = Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "table", TABLE_NAME, "column", "status");
         Map<String, Object> currentPlanArguments = Map.of("plan_id", "plan-1", "database", DATABASE_NAME, "schema", SCHEMA_NAME, "table", TABLE_NAME, "column", "status");
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
-                createToolCallCompletion("tool-1", "database_gateway_plan_mask_rule", initialPlanArguments, "initial-plan-response"));
         when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
+                createToolCallCompletion("tool-1", "database_gateway_plan_mask_rule", initialPlanArguments, "initial-plan-response"),
                 createToolCallCompletion("tool-2", "database_gateway_plan_mask_rule", currentPlanArguments, "current-plan-response"));
         when(getMCPInteractionClient().call("database_gateway_plan_mask_rule", initialPlanArguments)).thenReturn(Map.of("plan_id", "plan-1", "next_actions", List.of(Map.of(
                 "type", "tool_call",
@@ -210,7 +203,7 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
         assertThat(actual.getInteractionTrace().get(1).getArguments(), is(currentPlanArguments));
-        assertThat(actual.getInteractionTrace().get(1).getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        assertThat(actual.getInteractionTrace().get(1).getActionOrigin(), is(MCPInteractionTraceRecord.HARNESS_TEXT_RECOVERY_ORIGIN));
         verify(getMCPInteractionClient()).call("database_gateway_plan_mask_rule", currentPlanArguments);
     }
     
@@ -219,7 +212,7 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(3);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion(QUERY, List.of(), "query-text-response"),
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "query-tool-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload(2));
@@ -230,10 +223,10 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         
         assertTrue(actual.getAssertionReport().isSuccess());
         assertThat(actual.getInteractionTrace().size(), is(1));
-        assertThat(actual.getInteractionTrace().get(0).getTargetName(), is("database_gateway_execute_query"));
-        assertThat(actual.getInteractionTrace().get(0).getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        assertThat(actual.getInteractionTrace().getFirst().getTargetName(), is("database_gateway_execute_query"));
+        assertThat(actual.getInteractionTrace().getFirst().getActionOrigin(), is(MCPInteractionTraceRecord.HARNESS_TEXT_RECOVERY_ORIGIN));
         verify(getMCPInteractionClient()).call("database_gateway_execute_query", executeQueryArguments);
-        verify(getLLMChatClient(), times(2)).complete(anyList(), anyList(), eq("required"), eq(false));
+        verify(getLLMChatClient(), times(2)).complete(anyList(), anyList(), eq("auto"), eq(false));
     }
     
     @Test
@@ -241,8 +234,7 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_plan_mask_rule", "database_gateway_apply_workflow"));
         LLMMCPConversationRunner actualRunner = createRunner(3);
         Map<String, Object> planArguments = Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "table", TABLE_NAME, "column", "status");
-        final ArgumentCaptor<List<LLMChatMessage>> actualMessages = createChatMessagesCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_plan_mask_rule", planArguments, "plan-response"),
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response-1"));
         when(getMCPInteractionClient().call("database_gateway_plan_mask_rule", planArguments)).thenReturn(Map.of("plan_id", "plan-1"));
@@ -250,9 +242,9 @@ class LLMMCPConversationRunnerCoverageTest extends AbstractLLMMCPConversationRun
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        verify(getLLMChatClient(), times(3)).complete(actualMessages.capture(), anyList(), eq("required"), eq(false));
-        List<LLMChatMessage> actualThirdTurnMessages = actualMessages.getAllValues().get(2);
-        String actualRetryInstruction = actualThirdTurnMessages.get(actualThirdTurnMessages.size() - 1).getContent();
+        List<List<LLMChatMessage>> actualMessages = captureAutoChatMessages(3);
+        List<LLMChatMessage> actualThirdTurnMessages = actualMessages.get(2);
+        String actualRetryInstruction = actualThirdTurnMessages.getLast().getContent();
         assertThat(actualRetryInstruction, containsString("Remaining required MCP tools: database_gateway_apply_workflow"));
         assertThat(actualRetryInstruction, containsString("set plan_id `plan-1`"));
         assertThat(actualRetryInstruction, containsString("do not use placeholder text `plan_id`"));
