@@ -25,12 +25,8 @@ import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.client.LLMToolCal
 import org.apache.shardingsphere.test.e2e.mcp.llm.scenario.LLME2EScenario;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionActionNames;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionTraceRecord;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
@@ -38,11 +34,12 @@ import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -54,8 +51,7 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(3);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        final ArgumentCaptor<List<Map<String, Object>>> actualTools = createToolDefinitionsCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "tool-call-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
@@ -65,55 +61,53 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         
         assertTrue(actual.getAssertionReport().isSuccess());
         assertThat(actual.getInteractionTrace().size(), is(1));
-        assertThat(actual.getInteractionTrace().get(0).getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        assertThat(actual.getInteractionTrace().getFirst().getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
         assertThat(actual.getRawModelOutputs(), is(List.of("tool-call-response", "final-answer-response")));
-        verify(getLLMChatClient()).complete(anyList(), actualTools.capture(), eq("required"), eq(false));
         verify(getMCPInteractionClient()).open();
         verify(getMCPInteractionClient()).call("database_gateway_execute_query", executeQueryArguments);
         verify(getMCPInteractionClient()).close();
-        assertThat(getToolName(actualTools.getValue().get(0)), is("database_gateway_execute_query"));
-        assertThat(getMap(getFunction(actualTools.getValue().get(0)).get("parameters")).get("required"), is(List.of("database", "sql")));
+        List<List<Map<String, Object>>> actualTools = captureAutoToolDefinitions(1);
+        assertThat(getToolName(actualTools.getFirst().getFirst()), is("database_gateway_execute_query"));
+        assertThat(getMap(getFunction(actualTools.getFirst().getFirst()).get("parameters")).get("required"), is(List.of("database", "sql")));
     }
     
     @Test
-    void assertRunNormalizesMissingExecuteQuerySchema() throws IOException, InterruptedException {
+    void assertRunUsesExplicitExecuteQuerySchema() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(3);
-        Map<String, Object> modelQueryArguments = Map.of("database", DATABASE_NAME, "sql", QUERY, "max_rows", 10);
-        Map<String, Object> expectedQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        Map<String, Object> modelQueryArguments = createExecuteQueryArguments(QUERY);
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", modelQueryArguments, "tool-call-response"));
-        when(getMCPInteractionClient().call("database_gateway_execute_query", expectedQueryArguments)).thenReturn(createResultSetPayload(2));
+        when(getMCPInteractionClient().call("database_gateway_execute_query", modelQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
                 createFinalAnswerCompletion(List.of("database_gateway_execute_query"), 2, "final-answer-response"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertTrue(actual.getAssertionReport().isSuccess());
-        assertThat(actual.getInteractionTrace().get(0).getActionOrigin(), is(MCPInteractionTraceRecord.HARNESS_ARGUMENT_NORMALIZATION_ORIGIN));
-        assertThat(actual.getInteractionTrace().get(0).getArguments(), is(expectedQueryArguments));
-        verify(getMCPInteractionClient()).call("database_gateway_execute_query", expectedQueryArguments);
-        verify(getLLMChatClient(), never()).complete(anyList(), anyList(), eq("auto"), eq(false));
+        assertThat(actual.getInteractionTrace().getFirst().getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        assertThat(actual.getInteractionTrace().getFirst().getArguments(), is(modelQueryArguments));
+        verify(getMCPInteractionClient()).call("database_gateway_execute_query", modelQueryArguments);
+        verify(getLLMChatClient()).complete(anyList(), anyList(), eq("auto"), eq(false));
     }
     
     @Test
-    void assertRunNormalizesMissingSearchMetadataScope() throws IOException, InterruptedException {
+    void assertRunUsesExplicitSearchMetadataScope() throws IOException, InterruptedException {
         List<String> toolNames = List.of("database_gateway_search_metadata", "database_gateway_execute_query");
         LLME2EScenario actualScenario = createScenario(toolNames, "Use logical database `logic_db` and schema `public` when searching.");
         LLMMCPConversationRunner actualRunner = createRunner(3);
-        Map<String, Object> modelSearchArguments = Map.of("query", TABLE_NAME, "object_types", List.of("table"));
-        Map<String, Object> expectedSearchArguments = Map.of(
+        Map<String, Object> modelSearchArguments = Map.of(
                 "query", TABLE_NAME,
                 "object_types", List.of("table"),
                 "database", DATABASE_NAME,
                 "schema", SCHEMA_NAME);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(new LLMChatCompletion("",
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(new LLMChatCompletion("",
                 List.of(
                         new LLMToolCall("tool-1", "database_gateway_search_metadata", JsonUtils.toJsonString(modelSearchArguments)),
                         new LLMToolCall("tool-2", "database_gateway_execute_query", JsonUtils.toJsonString(executeQueryArguments))),
                 "tool-call-response"));
-        when(getMCPInteractionClient().call("database_gateway_search_metadata", expectedSearchArguments)).thenReturn(
+        when(getMCPInteractionClient().call("database_gateway_search_metadata", modelSearchArguments)).thenReturn(
                 Map.of("items", List.of(Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "table", TABLE_NAME))));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
@@ -122,29 +116,28 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertTrue(actual.getAssertionReport().isSuccess());
-        assertThat(actual.getInteractionTrace().get(0).getActionOrigin(), is(MCPInteractionTraceRecord.HARNESS_ARGUMENT_NORMALIZATION_ORIGIN));
-        assertThat(actual.getInteractionTrace().get(0).getArguments(), is(expectedSearchArguments));
-        verify(getMCPInteractionClient()).call("database_gateway_search_metadata", expectedSearchArguments);
+        assertThat(actual.getInteractionTrace().getFirst().getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        assertThat(actual.getInteractionTrace().getFirst().getArguments(), is(modelSearchArguments));
+        verify(getMCPInteractionClient()).call("database_gateway_search_metadata", modelSearchArguments);
     }
     
     @Test
-    void assertRunNormalizesSchemaQualifiedExecuteQuerySchema() throws IOException, InterruptedException {
+    void assertRunUsesSchemaQualifiedExecuteQuerySchema() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
         LLMMCPConversationRunner actualRunner = createRunner(3);
         String actualQuery = "SELECT COUNT(*) AS total_orders FROM public.orders";
-        Map<String, Object> modelQueryArguments = Map.of("database", DATABASE_NAME, "sql", actualQuery);
-        Map<String, Object> expectedQueryArguments = Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "sql", actualQuery);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        Map<String, Object> modelQueryArguments = Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "sql", actualQuery);
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", modelQueryArguments, "tool-call-response"));
-        when(getMCPInteractionClient().call("database_gateway_execute_query", expectedQueryArguments)).thenReturn(createResultSetPayload(2));
+        when(getMCPInteractionClient().call("database_gateway_execute_query", modelQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
                 createFinalAnswerCompletion(List.of("database_gateway_execute_query"), 2, "final-answer-response"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertTrue(actual.getAssertionReport().isSuccess());
-        assertThat(actual.getInteractionTrace().get(0).getArguments(), is(expectedQueryArguments));
-        verify(getLLMChatClient(), never()).complete(anyList(), anyList(), eq("auto"), eq(false));
+        assertThat(actual.getInteractionTrace().getFirst().getArguments(), is(modelQueryArguments));
+        verify(getLLMChatClient()).complete(anyList(), anyList(), eq("auto"), eq(false));
     }
     
     @Test
@@ -158,8 +151,7 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
                 "schema", SCHEMA_NAME,
                 "sql", "UPDATE orders SET status = status WHERE order_id = -1",
                 "execution_mode", "preview");
-        final ArgumentCaptor<List<LLMChatMessage>> actualFinalMessages = createChatMessagesCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(new LLMChatCompletion("",
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(new LLMChatCompletion("",
                 List.of(
                         new LLMToolCall("tool-1", "database_gateway_execute_query", JsonUtils.toJsonString(executeQueryArguments)),
                         new LLMToolCall("tool-2", "database_gateway_execute_update", JsonUtils.toJsonString(executeUpdateArguments))),
@@ -172,27 +164,36 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertTrue(actual.getAssertionReport().isSuccess());
-        verify(getLLMChatClient()).complete(actualFinalMessages.capture(), eq(List.of()), eq("none"), eq(true));
-        List<LLMChatMessage> actualMessages = actualFinalMessages.getValue();
-        String actualInstruction = actualMessages.get(actualMessages.size() - 1).getContent();
+        List<List<LLMChatMessage>> actualFinalMessages = captureFinalChatMessages();
+        List<LLMChatMessage> actualMessages = actualFinalMessages.getFirst();
+        String actualInstruction = actualMessages.getLast().getContent();
         assertThat(actualInstruction, containsString("interactionSequence exactly to this JSON array: [\"database_gateway_execute_query\",\"database_gateway_execute_update\"]"));
         assertThat(actualInstruction, not(containsString("database_gateway_search_metadata")));
     }
     
     @Test
     void assertRunWithResourceBridgeSequence() throws IOException, InterruptedException {
-        List<String> actualToolNames = List.of(MCPInteractionActionNames.LIST_RESOURCES, MCPInteractionActionNames.READ_RESOURCE, "database_gateway_execute_query");
+        List<String> actualToolNames = List.of(
+                MCPInteractionActionNames.LIST_TOOLS,
+                MCPInteractionActionNames.LIST_RESOURCES,
+                MCPInteractionActionNames.LIST_RESOURCE_TEMPLATES,
+                MCPInteractionActionNames.READ_RESOURCE,
+                "database_gateway_execute_query");
         LLME2EScenario actualScenario = createScenario(actualToolNames);
         LLMMCPConversationRunner actualRunner = createRunner(3);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(new LLMChatCompletion("",
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(new LLMChatCompletion("",
                 List.of(
-                        new LLMToolCall("tool-1", MCPInteractionActionNames.LIST_RESOURCES, "{}"),
-                        new LLMToolCall("tool-2", MCPInteractionActionNames.READ_RESOURCE, JsonUtils.toJsonString(Map.of("uri", RESOURCE_URI))),
-                        new LLMToolCall("tool-3", "database_gateway_execute_query", JsonUtils.toJsonString(executeQueryArguments))),
+                        new LLMToolCall("tool-1", MCPInteractionActionNames.LIST_TOOLS, "{}"),
+                        new LLMToolCall("tool-2", MCPInteractionActionNames.LIST_RESOURCES, "{}"),
+                        new LLMToolCall("tool-3", MCPInteractionActionNames.LIST_RESOURCE_TEMPLATES, "{}"),
+                        new LLMToolCall("tool-4", MCPInteractionActionNames.READ_RESOURCE, JsonUtils.toJsonString(Map.of("uri", RESOURCE_URI))),
+                        new LLMToolCall("tool-5", "database_gateway_execute_query", JsonUtils.toJsonString(executeQueryArguments))),
                 "tool-call-response"));
+        when(getMCPInteractionClient().listTools()).thenReturn(List.of(Map.of("name", "database_gateway_execute_query")));
         when(getMCPInteractionClient().listResources()).thenReturn(Map.of("resources", List.of(Map.of("uri", RESOURCE_URI))));
-        when(getMCPInteractionClient().readResource(RESOURCE_URI)).thenReturn(Map.of("supportedTools", List.of("database_gateway_search_metadata", "database_gateway_execute_query")));
+        when(getMCPInteractionClient().listResourceTemplates()).thenReturn(Map.of("resourceTemplates", List.of(Map.of("uriTemplate", "shardingsphere://databases/{database}"))));
+        when(getMCPInteractionClient().readResource(RESOURCE_URI)).thenReturn(Map.of("supportedStatementClasses", List.of("QUERY")));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload("2"));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
                 createFinalAnswerCompletion(actualToolNames, "2", "final-answer-response"));
@@ -200,13 +201,17 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertTrue(actual.getAssertionReport().isSuccess());
-        assertThat(actual.getInteractionTrace().size(), is(3));
-        assertThat(actual.getInteractionTrace().get(0).getActionKind(), is(MCPInteractionActionNames.RESOURCE_LIST_KIND));
-        assertThat(actual.getInteractionTrace().get(0).getActionOrigin(), is(MCPInteractionTraceRecord.PROTOCOL_BRIDGE_ORIGIN));
-        assertThat(actual.getInteractionTrace().get(1).getActionKind(), is(MCPInteractionActionNames.RESOURCE_READ_KIND));
-        assertThat(actual.getInteractionTrace().get(2).getTargetName(), is("database_gateway_execute_query"));
-        assertThat(actual.getInteractionTrace().get(2).getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        assertThat(actual.getInteractionTrace().size(), is(5));
+        assertThat(actual.getInteractionTrace().getFirst().getActionKind(), is(MCPInteractionActionNames.TOOL_LIST_KIND));
+        assertThat(actual.getInteractionTrace().getFirst().getActionOrigin(), is(MCPInteractionTraceRecord.PROTOCOL_BRIDGE_ORIGIN));
+        assertThat(actual.getInteractionTrace().get(1).getActionKind(), is(MCPInteractionActionNames.RESOURCE_LIST_KIND));
+        assertThat(actual.getInteractionTrace().get(2).getActionKind(), is(MCPInteractionActionNames.RESOURCE_TEMPLATE_LIST_KIND));
+        assertThat(actual.getInteractionTrace().get(3).getActionKind(), is(MCPInteractionActionNames.RESOURCE_READ_KIND));
+        assertThat(actual.getInteractionTrace().get(4).getTargetName(), is("database_gateway_execute_query"));
+        assertThat(actual.getInteractionTrace().get(4).getActionOrigin(), is(MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN));
+        verify(getMCPInteractionClient()).listTools();
         verify(getMCPInteractionClient()).listResources();
+        verify(getMCPInteractionClient()).listResourceTemplates();
         verify(getMCPInteractionClient()).readResource(RESOURCE_URI);
         verify(getMCPInteractionClient()).call("database_gateway_execute_query", executeQueryArguments);
     }
@@ -222,7 +227,7 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         Map<String, Object> applyArguments = Map.of("plan_id", "plan-1", "execution_mode", "manual-only");
         Map<String, Object> validateArguments = Map.of("plan_id", "plan-1");
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(new LLMChatCompletion("",
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(new LLMChatCompletion("",
                 List.of(
                         new LLMToolCall("tool-1", MCPInteractionActionNames.READ_RESOURCE, JsonUtils.toJsonString(Map.of("uri", "shardingsphere://features/mask/algorithms"))),
                         new LLMToolCall("tool-2", "database_gateway_plan_mask_rule", JsonUtils.toJsonString(planArguments)),
@@ -235,7 +240,7 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         when(getMCPInteractionClient().readResource("shardingsphere://features/mask/algorithms")).thenReturn(Map.of("algorithms", List.of(Map.of("type", "MD5"))));
         when(getMCPInteractionClient().call("database_gateway_plan_mask_rule", planArguments))
                 .thenReturn(Map.of("plan_id", "plan-1", "resources_to_read", List.of(Map.of("uri", workflowResourceUri))));
-        when(getMCPInteractionClient().readResource("shardingsphere://runtime")).thenReturn(Map.of("status", "available", "capability_fingerprint", "abc"));
+        when(getMCPInteractionClient().readResource("shardingsphere://runtime")).thenReturn(Map.of("status", "available"));
         when(getMCPInteractionClient().readResource(workflowResourceUri)).thenReturn(Map.of("plan_id", "plan-1", "status", "planned"));
         when(getMCPInteractionClient().call("database_gateway_apply_workflow", applyArguments)).thenReturn(Map.of("status", "awaiting-manual-execution", "response_mode", "manual_only"));
         when(getMCPInteractionClient().call("database_gateway_validate_workflow", validateArguments)).thenReturn(Map.of("status", "passed", "overall_status", "passed"));
@@ -263,19 +268,16 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLMMCPConversationRunner actualRunner = createRunner(3);
         Map<String, Object> promptArguments = Map.of("query", "orders", "database", DATABASE_NAME);
         Map<String, Object> completionReference = Map.of("type", "ref/prompt", "name", PROMPT_NAME);
-        Map<String, Object> completionReferenceArgument = Map.of("type", "prompt", "name", PROMPT_NAME);
         Map<String, String> completionContext = Map.of("database", DATABASE_NAME);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        final ArgumentCaptor<List<Map<String, Object>>> actualTools = createToolDefinitionsCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(new LLMChatCompletion("",
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(new LLMChatCompletion("",
                 List.of(
                         new LLMToolCall("tool-1", MCPInteractionActionNames.LIST_PROMPTS, "{}"),
                         new LLMToolCall("tool-2", MCPInteractionActionNames.GET_PROMPT, JsonUtils.toJsonString(Map.of("name", PROMPT_NAME, "arguments", promptArguments))),
                         new LLMToolCall("tool-3", MCPInteractionActionNames.COMPLETE, JsonUtils.toJsonString(Map.of(
-                                "reference", completionReferenceArgument,
-                                "argument_name", "schema",
-                                "argument_value", "pub",
-                                "context_arguments", completionContext))),
+                                "ref", completionReference,
+                                "argument", Map.of("name", "schema", "value", "pub"),
+                                "context", Map.of("arguments", completionContext)))),
                         new LLMToolCall("tool-4", "database_gateway_execute_query", JsonUtils.toJsonString(executeQueryArguments))),
                 "tool-call-response"));
         when(getMCPInteractionClient().listPrompts()).thenReturn(Map.of("prompts", List.of(Map.of("name", PROMPT_NAME))));
@@ -289,39 +291,38 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         
         assertTrue(actual.getAssertionReport().isSuccess());
         assertThat(actual.getInteractionTrace().size(), is(4));
-        assertThat(actual.getInteractionTrace().get(0).getActionKind(), is(MCPInteractionActionNames.PROMPT_LIST_KIND));
+        assertThat(actual.getInteractionTrace().getFirst().getActionKind(), is(MCPInteractionActionNames.PROMPT_LIST_KIND));
         assertThat(actual.getInteractionTrace().get(1).getActionKind(), is(MCPInteractionActionNames.PROMPT_GET_KIND));
         assertThat(actual.getInteractionTrace().get(2).getActionKind(), is(MCPInteractionActionNames.COMPLETION_KIND));
-        verify(getLLMChatClient()).complete(anyList(), actualTools.capture(), eq("required"), eq(false));
         verify(getMCPInteractionClient()).listPrompts();
         verify(getMCPInteractionClient()).getPrompt(PROMPT_NAME, promptArguments);
         verify(getMCPInteractionClient()).complete(completionReference, "schema", "pub", completionContext);
-        assertThat(getToolName(actualTools.getValue().get(0)), is(MCPInteractionActionNames.LIST_PROMPTS));
+        List<List<Map<String, Object>>> actualTools = captureAutoToolDefinitions(1);
+        assertThat(getToolName(actualTools.getFirst().getFirst()), is(MCPInteractionActionNames.LIST_PROMPTS));
     }
     
     @Test
     void assertRunWithSearchMetadataToolDefinition() throws IOException, InterruptedException {
         LLME2EScenario actualScenario = createScenario(List.of("database_gateway_search_metadata"));
         LLMMCPConversationRunner actualRunner = createRunner(1);
-        ArgumentCaptor<List<Map<String, Object>>> actualTools = createToolDefinitionsCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 new LLMChatCompletion("I already know the answer.", List.of(), "direct-answer-response"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("missing_required_tool_coverage"));
-        verify(getLLMChatClient()).complete(anyList(), actualTools.capture(), eq("required"), eq(false));
-        assertThat(getToolName(actualTools.getValue().get(0)), is("database_gateway_search_metadata"));
-        assertThat(getRequiredFields(actualTools.getValue().get(0)), is(List.of()));
-        assertThat(getPropertyType(actualTools.getValue().get(0), "database"), is("string"));
-        assertThat(getPropertyType(actualTools.getValue().get(0), "schema"), is("string"));
-        assertThat(getPropertyType(actualTools.getValue().get(0), "query"), is("string"));
-        assertThat(getPropertyType(actualTools.getValue().get(0), "object_types"), is("array"));
-        assertThat(getNestedPropertyType(actualTools.getValue().get(0), "object_types", "items"), is("string"));
+        List<List<Map<String, Object>>> actualTools = captureAutoToolDefinitions(1);
+        assertThat(getToolName(actualTools.getFirst().getFirst()), is("database_gateway_search_metadata"));
+        assertThat(getRequiredFields(actualTools.getFirst().getFirst()), is(List.of()));
+        assertThat(getPropertyType(actualTools.getFirst().getFirst(), "database"), is("string"));
+        assertThat(getPropertyType(actualTools.getFirst().getFirst(), "schema"), is("string"));
+        assertThat(getPropertyType(actualTools.getFirst().getFirst(), "query"), is("string"));
+        assertThat(getPropertyType(actualTools.getFirst().getFirst(), "object_types"), is("array"));
+        assertThat(getNestedPropertyType(actualTools.getFirst().getFirst(), "object_types", "items"), is("string"));
     }
     
     @Test
-    void assertRunOffersOnlyNextMissingRequiredTool() throws IOException, InterruptedException {
+    void assertRunOffersAllAllowedTools() throws IOException, InterruptedException {
         List<String> toolNames = List.of("database_gateway_search_metadata", MCPInteractionActionNames.READ_RESOURCE, "database_gateway_execute_query");
         LLME2EScenario actualScenario = createScenario(toolNames);
         LLMMCPConversationRunner actualRunner = createRunner(4);
@@ -329,8 +330,7 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         Map<String, Object> searchArguments = Map.of("query", TABLE_NAME);
         Map<String, Object> readResourceArguments = Map.of("uri", tableResourceUri);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        final ArgumentCaptor<List<Map<String, Object>>> actualTools = createToolDefinitionsCaptor();
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_search_metadata", searchArguments, "search-response"),
                 createToolCallCompletion("tool-2", MCPInteractionActionNames.READ_RESOURCE, readResourceArguments, "resource-response"),
                 createToolCallCompletion("tool-3", "database_gateway_execute_query", executeQueryArguments, "query-response"));
@@ -342,28 +342,26 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertTrue(actual.getAssertionReport().isSuccess());
-        verify(getLLMChatClient(), times(3)).complete(anyList(), actualTools.capture(), eq("required"), eq(false));
-        assertThat(getToolNames(actualTools.getAllValues().get(0)), is(List.of("database_gateway_search_metadata")));
-        assertThat(getToolNames(actualTools.getAllValues().get(1)), is(List.of(MCPInteractionActionNames.READ_RESOURCE)));
-        assertThat(getToolNames(actualTools.getAllValues().get(2)), is(List.of("database_gateway_execute_query")));
+        List<List<Map<String, Object>>> actualTools = captureAutoToolDefinitions(3);
+        for (List<Map<String, Object>> each : actualTools) {
+            assertThat(getToolNames(each), is(toolNames));
+        }
     }
     
     @Test
-    void assertRunAcceptsObjectInteractionSequence() throws IOException, InterruptedException {
-        final LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
-        final LLMMCPConversationRunner actualRunner = createRunner(2);
+    void assertRunRejectsObjectInteractionSequence() throws IOException, InterruptedException {
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
         Map<String, Object> finalAnswerPayload = createFinalAnswerPayload(List.of(), 2);
         finalAnswerPayload.put("interactionSequence", List.of(Map.of("tool", "database_gateway_execute_query", "arguments", executeQueryArguments)));
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "tool-call-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
                 new LLMChatCompletion(JsonUtils.toJsonString(finalAnswerPayload), List.of(), "final-answer-response"));
         
-        LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
+        LLME2EArtifactBundle actual = createRunner(2).run(createScenario(List.of("database_gateway_execute_query")));
         
-        assertTrue(actual.getAssertionReport().isSuccess());
+        assertThat(actual.getAssertionReport().getFailureType(), is("invalid_final_json"));
     }
     
     @Test
@@ -373,7 +371,7 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
         LLMMCPConversationRunner actualRunner = createRunner(2);
         Map<String, Object> searchMetadataArguments = Map.of("database", DATABASE_NAME, "schema", SCHEMA_NAME, "query", TABLE_NAME);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(new LLMChatCompletion("",
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(new LLMChatCompletion("",
                 List.of(
                         new LLMToolCall("tool-1", "database_gateway_search_metadata", JsonUtils.toJsonString(searchMetadataArguments)),
                         new LLMToolCall("tool-2", "database_gateway_search_metadata", JsonUtils.toJsonString(searchMetadataArguments)),
@@ -391,18 +389,16 @@ class LLMMCPConversationRunnerTest extends AbstractLLMMCPConversationRunnerTest 
     
     @Test
     void assertRunAcceptsSchemaQualifiedQuery() throws IOException, InterruptedException {
-        final LLME2EScenario actualScenario = createScenario(List.of("database_gateway_execute_query"));
-        final LLMMCPConversationRunner actualRunner = createRunner(2);
         Map<String, Object> executeQueryArguments = createExecuteQueryArguments(QUERY);
         Map<String, Object> finalAnswerPayload = createFinalAnswerPayload(List.of("database_gateway_execute_query"), 2);
         finalAnswerPayload.put("query", "SELECT COUNT(*) AS total_orders FROM public.orders");
-        when(getLLMChatClient().complete(anyList(), anyList(), eq("required"), eq(false))).thenReturn(
+        when(getLLMChatClient().complete(anyList(), anyList(), eq("auto"), eq(false))).thenReturn(
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "tool-call-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
                 new LLMChatCompletion(JsonUtils.toJsonString(finalAnswerPayload), List.of(), "final-answer-response"));
         
-        LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
+        LLME2EArtifactBundle actual = createRunner(2).run(createScenario(List.of("database_gateway_execute_query")));
         
         assertTrue(actual.getAssertionReport().isSuccess());
     }
