@@ -17,17 +17,13 @@
 
 package org.apache.shardingsphere.test.e2e.mcp.llm.suite.usability.assessment;
 
-import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.LLMMCPNextActions;
 import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.artifact.LLME2EArtifactBundle;
 import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.artifact.LLME2EAssertionReport;
 import org.apache.shardingsphere.test.e2e.mcp.llm.suite.usability.scenario.LLMUsabilityScenario;
-import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionActionNames;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionTraceRecord;
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.function.Predicate;
 
 /**
@@ -42,8 +38,6 @@ public final class LLMUsabilityMetricCalculator {
     private static final double FIRST_CORRECT_ACTION_WEIGHT = 15.0D;
     
     private static final double NO_INVALID_CALL_WEIGHT = 10.0D;
-    
-    private static final double QUERY_ANSWER_FIDELITY_WEIGHT = 10.0D;
     
     private static final double NO_BOUNDARY_CONFUSION_WEIGHT = 10.0D;
     
@@ -64,12 +58,13 @@ public final class LLMUsabilityMetricCalculator {
      */
     public LLMUsabilityScenarioResult evaluateScenario(final LLMUsabilityScenario scenario, final LLME2EArtifactBundle artifactBundle) {
         List<MCPInteractionTraceRecord> interactionTrace = artifactBundle.getInteractionTrace();
+        LLMUsabilityTraceMetrics traceMetrics = new LLMUsabilityTraceMetrics();
         boolean firstCorrectAction = interactionTrace.isEmpty() || scenario.getExpectedFirstActionNames().isEmpty()
                 ? !interactionTrace.isEmpty()
-                : scenario.getExpectedFirstActionNames().contains(interactionTrace.get(0).getTargetName());
-        int invalidCallCount = getInvalidCallCount(interactionTrace, scenario.getExpectedRecoveryCategory());
-        boolean resourceHit = hasResourceHit(scenario.getExpectedResourceUris(), interactionTrace);
-        boolean expectedRecoveryObserved = hasExpectedRecoveryInteraction(interactionTrace, scenario.getExpectedRecoveryCategory());
+                : scenario.getExpectedFirstActionNames().contains(interactionTrace.getFirst().getTargetName());
+        int invalidCallCount = traceMetrics.getInvalidCallCount(interactionTrace, scenario.getExpectedRecoveryCategory());
+        boolean resourceHit = traceMetrics.hasResourceHit(scenario.getExpectedResourceUris(), interactionTrace);
+        boolean expectedRecoveryObserved = traceMetrics.hasExpectedRecoveryInteraction(interactionTrace, scenario.getExpectedRecoveryCategory());
         boolean boundaryConfusion = !scenario.getExpectedFirstActionNames().isEmpty() && !firstCorrectAction;
         LLME2EAssertionReport assertionReport = artifactBundle.getAssertionReport();
         boolean success = assertionReport.isSuccess();
@@ -87,14 +82,30 @@ public final class LLMUsabilityMetricCalculator {
             message = "Scenario expected one recoverable MCP error with category `" + scenario.getExpectedRecoveryCategory() + "` before final success.";
         }
         boolean recoveredAfterError = success && (!scenario.isRecoveryExpected() || expectedRecoveryObserved);
-        double queryAnswerFidelity = scenario.isQueryScenario() && success ? 1.0D : 0.0D;
-        boolean nextActionFollowed = isNextActionFollowed(interactionTrace);
-        boolean approvalViolation = hasApprovalViolation(interactionTrace);
-        boolean nativeToolCallCoverage = hasNativeRequiredToolCoverage(scenario.getLlmScenario().getRequiredToolNames(), interactionTrace);
-        boolean harnessRecoveryUsed = hasHarnessRecovery(interactionTrace);
-        return new LLMUsabilityScenarioResult(scenario.getScenarioId(), scenario.getDimension(), scenario.getRuntimeKind(), scenario.getTags(), success, failureType, message,
-                firstCorrectAction, invalidCallCount, interactionTrace.size(), resourceHit, recoveredAfterError, queryAnswerFidelity,
-                boundaryConfusion, nextActionFollowed, approvalViolation, nativeToolCallCoverage, harnessRecoveryUsed, interactionTrace);
+        boolean nextActionFollowed = traceMetrics.isNextActionFollowed(interactionTrace);
+        boolean approvalViolation = traceMetrics.hasApprovalViolation(interactionTrace);
+        boolean nativeToolCallCoverage = traceMetrics.hasNativeRequiredToolCoverage(scenario.getLlmScenario().getRequiredToolNames(), interactionTrace);
+        boolean harnessRecoveryUsed = traceMetrics.hasHarnessRecovery(interactionTrace);
+        return LLMUsabilityScenarioResult.builder()
+                .scenarioId(scenario.getScenarioId())
+                .dimension(scenario.getDimension())
+                .runtimeKind(scenario.getRuntimeKind())
+                .tags(scenario.getTags())
+                .success(success)
+                .failureType(failureType)
+                .message(message)
+                .firstCorrectAction(firstCorrectAction)
+                .invalidCallCount(invalidCallCount)
+                .roundTripCount(interactionTrace.size())
+                .resourceHit(resourceHit)
+                .recoveredAfterError(recoveredAfterError)
+                .boundaryConfusion(boundaryConfusion)
+                .nextActionFollowed(nextActionFollowed)
+                .approvalViolation(approvalViolation)
+                .nativeToolCallCoverage(nativeToolCallCoverage)
+                .harnessRecoveryUsed(harnessRecoveryUsed)
+                .interactionTrace(interactionTrace)
+                .build();
     }
     
     /**
@@ -107,39 +118,73 @@ public final class LLMUsabilityMetricCalculator {
      */
     public LLMUsabilityScorecard createScorecard(final String suiteId, final String runId, final List<LLMUsabilityScenarioResult> scenarioResults) {
         double taskSuccessRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isSuccess);
+        int naturalTaskSampleCount = countTag(scenarioResults, LLMUsabilityScenario.NATURAL_TASK_TAG);
         double naturalTaskSuccessRate = getTaggedSuccessRate(scenarioResults, LLMUsabilityScenario.NATURAL_TASK_TAG);
+        int protocolContractSampleCount = countTag(scenarioResults, LLMUsabilityScenario.PROTOCOL_CONTRACT_TAG);
         double protocolContractSuccessRate = getTaggedSuccessRate(scenarioResults, LLMUsabilityScenario.PROTOCOL_CONTRACT_TAG);
         double firstCorrectActionRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isFirstCorrectAction);
         double invalidCallRate = getInvalidCallRate(scenarioResults);
         double averageRoundTrips = getAverageRoundTrips(scenarioResults);
-        double queryAnswerFidelity = getQueryAnswerFidelity(scenarioResults);
         double boundaryConfusionRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isBoundaryConfusion);
+        int resourceHitSampleCount = countDimension(scenarioResults, LLMUsabilityDimension.RESOURCE);
         double resourceHitRate = getResourceHitRate(scenarioResults);
+        int recoverySampleCount = countDimension(scenarioResults, LLMUsabilityDimension.RECOVERY);
         double recoveryRate = getRecoveryRate(scenarioResults);
         double nextActionFollowRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isNextActionFollowed);
         double approvalViolationRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isApprovalViolation);
         double nativeToolCallRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isNativeToolCallCoverage);
         double harnessRecoveryRate = calculateRate(scenarioResults, LLMUsabilityScenarioResult::isHarnessRecoveryUsed);
-        double overallScore = calculateOverallScore(taskSuccessRate, firstCorrectActionRate, invalidCallRate, queryAnswerFidelity,
-                boundaryConfusionRate, resourceHitRate, recoveryRate, nextActionFollowRate, approvalViolationRate);
-        return new LLMUsabilityScorecard(suiteId, runId, overallScore,
-                isFullScore(overallScore, nativeToolCallRate, harnessRecoveryRate, naturalTaskSuccessRate, protocolContractSuccessRate), taskSuccessRate,
-                naturalTaskSuccessRate, protocolContractSuccessRate, firstCorrectActionRate, invalidCallRate, averageRoundTrips, queryAnswerFidelity, boundaryConfusionRate,
-                resourceHitRate, recoveryRate, nextActionFollowRate, approvalViolationRate, nativeToolCallRate, harnessRecoveryRate, scenarioResults);
+        double overallScore = scenarioResults.isEmpty() ? 0.0D
+                : calculateOverallScore(taskSuccessRate, firstCorrectActionRate, invalidCallRate, boundaryConfusionRate,
+                        resourceHitRate, resourceHitSampleCount, recoveryRate, recoverySampleCount, nextActionFollowRate, approvalViolationRate);
+        return LLMUsabilityScorecard.builder()
+                .suiteId(suiteId)
+                .runId(runId)
+                .overallScore(overallScore)
+                .fullScore(isFullScore(overallScore, nativeToolCallRate, harnessRecoveryRate, naturalTaskSuccessRate, naturalTaskSampleCount,
+                        protocolContractSuccessRate, protocolContractSampleCount))
+                .taskSuccessRate(taskSuccessRate)
+                .naturalTaskSuccessRate(naturalTaskSuccessRate)
+                .naturalTaskSampleCount(naturalTaskSampleCount)
+                .protocolContractSuccessRate(protocolContractSuccessRate)
+                .protocolContractSampleCount(protocolContractSampleCount)
+                .firstCorrectActionRate(firstCorrectActionRate)
+                .invalidCallRate(invalidCallRate)
+                .averageRoundTrips(averageRoundTrips)
+                .boundaryConfusionRate(boundaryConfusionRate)
+                .resourceHitRate(resourceHitRate)
+                .resourceHitSampleCount(resourceHitSampleCount)
+                .recoveryRate(recoveryRate)
+                .recoverySampleCount(recoverySampleCount)
+                .nextActionFollowRate(nextActionFollowRate)
+                .approvalViolationRate(approvalViolationRate)
+                .nativeToolCallRate(nativeToolCallRate)
+                .harnessRecoveryRate(harnessRecoveryRate)
+                .scenarioResults(scenarioResults)
+                .build();
     }
     
     private double calculateOverallScore(final double taskSuccessRate, final double firstCorrectActionRate, final double invalidCallRate,
-                                         final double queryAnswerFidelity, final double boundaryConfusionRate, final double resourceHitRate,
-                                         final double recoveryRate, final double nextActionFollowRate, final double approvalViolationRate) {
-        return TASK_SUCCESS_WEIGHT * taskSuccessRate
+                                         final double boundaryConfusionRate, final double resourceHitRate, final int resourceHitSampleCount,
+                                         final double recoveryRate, final int recoverySampleCount, final double nextActionFollowRate,
+                                         final double approvalViolationRate) {
+        double weightedScore = TASK_SUCCESS_WEIGHT * taskSuccessRate
                 + FIRST_CORRECT_ACTION_WEIGHT * firstCorrectActionRate
                 + NO_INVALID_CALL_WEIGHT * invertRate(invalidCallRate)
-                + QUERY_ANSWER_FIDELITY_WEIGHT * queryAnswerFidelity
                 + NO_BOUNDARY_CONFUSION_WEIGHT * invertRate(boundaryConfusionRate)
-                + RESOURCE_HIT_WEIGHT * resourceHitRate
-                + RECOVERY_WEIGHT * recoveryRate
                 + NEXT_ACTION_FOLLOW_WEIGHT * nextActionFollowRate
                 + NO_APPROVAL_VIOLATION_WEIGHT * invertRate(approvalViolationRate);
+        double applicableWeight = TASK_SUCCESS_WEIGHT + FIRST_CORRECT_ACTION_WEIGHT + NO_INVALID_CALL_WEIGHT
+                + NO_BOUNDARY_CONFUSION_WEIGHT + NEXT_ACTION_FOLLOW_WEIGHT + NO_APPROVAL_VIOLATION_WEIGHT;
+        if (0 < resourceHitSampleCount) {
+            weightedScore += RESOURCE_HIT_WEIGHT * resourceHitRate;
+            applicableWeight += RESOURCE_HIT_WEIGHT;
+        }
+        if (0 < recoverySampleCount) {
+            weightedScore += RECOVERY_WEIGHT * recoveryRate;
+            applicableWeight += RECOVERY_WEIGHT;
+        }
+        return FULL_SCORE * weightedScore / applicableWeight;
     }
     
     private double invertRate(final double rate) {
@@ -147,9 +192,11 @@ public final class LLMUsabilityMetricCalculator {
     }
     
     private boolean isFullScore(final double overallScore, final double nativeToolCallRate, final double harnessRecoveryRate,
-                                final double naturalTaskSuccessRate, final double protocolContractSuccessRate) {
+                                final double naturalTaskSuccessRate, final int naturalTaskSampleCount,
+                                final double protocolContractSuccessRate, final int protocolContractSampleCount) {
         return 0 == Double.compare(FULL_SCORE, overallScore) && 0 == Double.compare(1.0D, nativeToolCallRate) && 0 == Double.compare(0.0D, harnessRecoveryRate)
-                && 0 == Double.compare(1.0D, naturalTaskSuccessRate) && 0 == Double.compare(1.0D, protocolContractSuccessRate);
+                && (0 == naturalTaskSampleCount || 0 == Double.compare(1.0D, naturalTaskSuccessRate))
+                && (0 == protocolContractSampleCount || 0 == Double.compare(1.0D, protocolContractSuccessRate));
     }
     
     private double calculateRate(final List<LLMUsabilityScenarioResult> scenarioResults, final Predicate<LLMUsabilityScenarioResult> matcher) {
@@ -172,28 +219,17 @@ public final class LLMUsabilityMetricCalculator {
                 taggedResults.add(each);
             }
         }
-        return taggedResults.isEmpty() ? 1.0D : calculateRate(taggedResults, LLMUsabilityScenarioResult::isSuccess);
+        return calculateRate(taggedResults, LLMUsabilityScenarioResult::isSuccess);
     }
     
-    private double getQueryAnswerFidelity(final List<LLMUsabilityScenarioResult> scenarioResults) {
-        List<LLMUsabilityScenarioResult> queryResults = new LinkedList<>();
+    private int countTag(final List<LLMUsabilityScenarioResult> scenarioResults, final String tag) {
+        int result = 0;
         for (LLMUsabilityScenarioResult each : scenarioResults) {
-            if (LLMUsabilityDimension.TOOL == each.getDimension() || LLMUsabilityDimension.RECOVERY == each.getDimension() || LLMUsabilityDimension.RESOURCE == each.getDimension()) {
-                queryResults.add(each);
+            if (each.getTags().contains(tag)) {
+                result++;
             }
         }
-        return getAverageQueryAnswerFidelity(queryResults);
-    }
-    
-    private double getAverageQueryAnswerFidelity(final List<LLMUsabilityScenarioResult> scenarioResults) {
-        if (scenarioResults.isEmpty()) {
-            return 1.0D;
-        }
-        double total = 0.0D;
-        for (LLMUsabilityScenarioResult each : scenarioResults) {
-            total += each.getQueryAnswerFidelity();
-        }
-        return total / scenarioResults.size();
+        return result;
     }
     
     private double getResourceHitRate(final List<LLMUsabilityScenarioResult> scenarioResults) {
@@ -203,7 +239,7 @@ public final class LLMUsabilityMetricCalculator {
                 resourceRequiredResults.add(each);
             }
         }
-        return resourceRequiredResults.isEmpty() ? 1.0D : calculateRate(resourceRequiredResults, LLMUsabilityScenarioResult::isResourceHit);
+        return calculateRate(resourceRequiredResults, LLMUsabilityScenarioResult::isResourceHit);
     }
     
     private double getRecoveryRate(final List<LLMUsabilityScenarioResult> scenarioResults) {
@@ -213,7 +249,17 @@ public final class LLMUsabilityMetricCalculator {
                 recoveryResults.add(each);
             }
         }
-        return recoveryResults.isEmpty() ? 1.0D : calculateRate(recoveryResults, LLMUsabilityScenarioResult::isRecoveredAfterError);
+        return calculateRate(recoveryResults, LLMUsabilityScenarioResult::isRecoveredAfterError);
+    }
+    
+    private int countDimension(final List<LLMUsabilityScenarioResult> scenarioResults, final LLMUsabilityDimension dimension) {
+        int result = 0;
+        for (LLMUsabilityScenarioResult each : scenarioResults) {
+            if (dimension == each.getDimension()) {
+                result++;
+            }
+        }
+        return result;
     }
     
     private double getInvalidCallRate(final List<LLMUsabilityScenarioResult> scenarioResults) {
@@ -239,223 +285,5 @@ public final class LLMUsabilityMetricCalculator {
             total += each.getRoundTripCount();
         }
         return total;
-    }
-    
-    private int getInvalidCallCount(final List<MCPInteractionTraceRecord> interactionTrace, final String expectedRecoveryCategory) {
-        int result = 0;
-        boolean expectedRecoverySignalObserved = false;
-        for (MCPInteractionTraceRecord each : interactionTrace) {
-            if (!isErrorInteraction(each)) {
-                continue;
-            }
-            if (!expectedRecoverySignalObserved && isExpectedRecoveryInteraction(each, expectedRecoveryCategory)) {
-                expectedRecoverySignalObserved = true;
-            } else {
-                result++;
-            }
-        }
-        return result;
-    }
-    
-    private boolean hasResourceHit(final List<String> expectedResourceUris, final List<MCPInteractionTraceRecord> interactionTrace) {
-        if (expectedResourceUris.isEmpty()) {
-            return true;
-        }
-        for (MCPInteractionTraceRecord each : interactionTrace) {
-            if (!MCPInteractionActionNames.RESOURCE_READ_KIND.equals(each.getActionKind())) {
-                continue;
-            }
-            String resourceUri = String.valueOf(each.getArguments().getOrDefault("uri", ""));
-            if (expectedResourceUris.contains(resourceUri)) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
-    private boolean hasNativeRequiredToolCoverage(final List<String> requiredToolNames, final List<MCPInteractionTraceRecord> interactionTrace) {
-        for (String each : requiredToolNames) {
-            if (!hasNativeRequiredTool(each, interactionTrace)) {
-                return false;
-            }
-        }
-        return true;
-    }
-    
-    private boolean hasNativeRequiredTool(final String requiredToolName, final List<MCPInteractionTraceRecord> interactionTrace) {
-        for (MCPInteractionTraceRecord each : interactionTrace) {
-            if (each.isValid() && requiredToolName.equals(each.getTargetName()) && isNativeToolOrigin(each.getActionOrigin())) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
-    private boolean isNativeToolOrigin(final String actionOrigin) {
-        return MCPInteractionTraceRecord.MODEL_TOOL_CALL_ORIGIN.equals(actionOrigin)
-                || MCPInteractionTraceRecord.PROTOCOL_BRIDGE_ORIGIN.equals(actionOrigin)
-                || MCPInteractionTraceRecord.HARNESS_ARGUMENT_NORMALIZATION_ORIGIN.equals(actionOrigin);
-    }
-    
-    private boolean hasHarnessRecovery(final List<MCPInteractionTraceRecord> interactionTrace) {
-        for (MCPInteractionTraceRecord each : interactionTrace) {
-            if (isHarnessOrigin(each.getActionOrigin())) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
-    private boolean isHarnessOrigin(final String actionOrigin) {
-        return MCPInteractionTraceRecord.HARNESS_TEXT_RECOVERY_ORIGIN.equals(actionOrigin);
-    }
-    
-    private boolean hasExpectedRecoveryInteraction(final List<MCPInteractionTraceRecord> interactionTrace, final String expectedRecoveryCategory) {
-        for (MCPInteractionTraceRecord each : interactionTrace) {
-            if (isExpectedRecoveryInteraction(each, expectedRecoveryCategory)) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
-    private boolean isExpectedRecoveryInteraction(final MCPInteractionTraceRecord interactionTraceRecord, final String expectedRecoveryCategory) {
-        return null != expectedRecoveryCategory && !expectedRecoveryCategory.isBlank() && isErrorInteraction(interactionTraceRecord)
-                && expectedRecoveryCategory.equals(getRecoveryCategory(interactionTraceRecord));
-    }
-    
-    private String getRecoveryCategory(final MCPInteractionTraceRecord interactionTraceRecord) {
-        Map<String, Object> structuredContent = interactionTraceRecord.getStructuredContent();
-        if (structuredContent.containsKey("recovery_category")) {
-            return Objects.toString(structuredContent.get("recovery_category"), "");
-        }
-        String recoveryCategory = getNestedRecoveryCategory(structuredContent.get("recovery"));
-        if (!recoveryCategory.isBlank()) {
-            return recoveryCategory;
-        }
-        String emptyStateCategory = getNestedRecoveryCategory(structuredContent.get("empty_state"));
-        if (!emptyStateCategory.isBlank()) {
-            return emptyStateCategory;
-        }
-        if (structuredContent.containsKey("ambiguity_state")) {
-            return getAmbiguityRecoveryCategory(structuredContent.get("ambiguity_state"));
-        }
-        return Objects.toString(structuredContent.get("error_code"), "");
-    }
-    
-    private String getNestedRecoveryCategory(final Object value) {
-        if (!(value instanceof Map)) {
-            return "";
-        }
-        Map<?, ?> map = (Map<?, ?>) value;
-        if (map.containsKey("recovery_category")) {
-            return Objects.toString(map.get("recovery_category"), "");
-        }
-        if (map.containsKey("category")) {
-            return Objects.toString(map.get("category"), "");
-        }
-        return Objects.toString(map.get("state"), "");
-    }
-    
-    private String getAmbiguityRecoveryCategory(final Object value) {
-        if (!(value instanceof Map)) {
-            return "ambiguous";
-        }
-        Map<?, ?> map = (Map<?, ?>) value;
-        if (map.containsKey("recovery_category")) {
-            return Objects.toString(map.get("recovery_category"), "");
-        }
-        return map.containsKey("category") ? Objects.toString(map.get("category"), "") : "ambiguous";
-    }
-    
-    private boolean isErrorInteraction(final MCPInteractionTraceRecord interactionTraceRecord) {
-        if (!interactionTraceRecord.isValid() || interactionTraceRecord.getStructuredContent().containsKey("error_code")) {
-            return true;
-        }
-        return isRecoverableEmptyState(interactionTraceRecord);
-    }
-    
-    private boolean isRecoverableEmptyState(final MCPInteractionTraceRecord interactionTraceRecord) {
-        return Boolean.FALSE.equals(interactionTraceRecord.getStructuredContent().get("found"))
-                || interactionTraceRecord.getStructuredContent().containsKey("empty_state")
-                || interactionTraceRecord.getStructuredContent().containsKey("ambiguity_state");
-    }
-    
-    private boolean isNextActionFollowed(final List<MCPInteractionTraceRecord> interactionTrace) {
-        boolean hasActionableGuidance = false;
-        for (int index = 0; index < interactionTrace.size() - 1; index++) {
-            List<Map<?, ?>> actions = getImmediateMachineNextActions(interactionTrace.get(index));
-            if (actions.isEmpty()) {
-                continue;
-            }
-            hasActionableGuidance = true;
-            if (!matchesAnyNextAction(actions, interactionTrace.get(index), interactionTrace.get(index + 1))) {
-                return false;
-            }
-        }
-        return !hasActionableGuidance || !interactionTrace.isEmpty();
-    }
-    
-    private List<Map<?, ?>> getImmediateMachineNextActions(final MCPInteractionTraceRecord interactionTraceRecord) {
-        List<Map<?, ?>> result = new LinkedList<>();
-        for (Map<?, ?> each : LLMMCPNextActions.getNextActions(interactionTraceRecord.getStructuredContent())) {
-            if (isMachineAction(each)) {
-                result.add(each);
-            }
-        }
-        return result;
-    }
-    
-    private boolean isMachineAction(final Map<?, ?> action) {
-        String type = Objects.toString(action.get("type"), "");
-        if (!"resource_read".equals(type) && !"tool_call".equals(type) && !"completion".equals(type)) {
-            return false;
-        }
-        if (!"tool_call".equals(type) || !(action.get("arguments") instanceof Map)) {
-            return true;
-        }
-        String executionMode = Objects.toString(((Map<?, ?>) action.get("arguments")).get("execution_mode"), "");
-        return !"execute".equals(executionMode) && !"review-then-execute".equals(executionMode);
-    }
-    
-    private boolean matchesAnyNextAction(final List<Map<?, ?>> actions, final MCPInteractionTraceRecord current, final MCPInteractionTraceRecord next) {
-        for (Map<?, ?> each : actions) {
-            if (matchesNextAction(each, current, next)) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
-    private boolean matchesNextAction(final Map<?, ?> action, final MCPInteractionTraceRecord current, final MCPInteractionTraceRecord next) {
-        String type = Objects.toString(action.get("type"), "");
-        if ("resource_read".equals(type)) {
-            return MCPInteractionActionNames.RESOURCE_READ_KIND.equals(next.getActionKind())
-                    && (Objects.equals(action.get("resource_uri"), next.getArguments().get("uri"))
-                            || isRecoverableResourceCorrection(current, next));
-        }
-        if ("tool_call".equals(type)) {
-            String targetTool = Objects.toString(action.get("tool_name"), current.getTargetName());
-            return Objects.equals(targetTool, next.getTargetName());
-        }
-        return "completion".equals(type) && MCPInteractionActionNames.COMPLETION_KIND.equals(next.getActionKind());
-    }
-    
-    private boolean isRecoverableResourceCorrection(final MCPInteractionTraceRecord current, final MCPInteractionTraceRecord next) {
-        return isRecoverableEmptyState(current) && Boolean.TRUE.equals(next.getStructuredContent().get("found"));
-    }
-    
-    private boolean hasApprovalViolation(final List<MCPInteractionTraceRecord> interactionTrace) {
-        for (int index = 0; index < interactionTrace.size(); index++) {
-            if (hasUnsafeApprovalError(interactionTrace.get(index))) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
-    private boolean hasUnsafeApprovalError(final MCPInteractionTraceRecord interactionTraceRecord) {
-        Object errorCode = interactionTraceRecord.getStructuredContent().get("error_code");
-        return "unsafe_sql_execution_attempted".equals(errorCode) || "unsafe_workflow_execution_attempted".equals(errorCode);
     }
 }
