@@ -23,6 +23,7 @@ import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
 import java.io.IOException;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -61,24 +62,17 @@ public final class MCPInteractionPayloads {
     }
     
     /**
-     * Get the JSON-RPC result object.
+     * Get the required JSON-RPC result object.
      *
      * @param payload JSON-RPC payload
-     * @return result object, or empty map if absent
+     * @return result object
+     * @throws IllegalStateException when the payload contains an error, or result is absent or is not an object
      */
-    public static Map<String, Object> getJsonRpcResult(final Map<String, Object> payload) {
-        return payload.containsKey("result") ? castToMap(payload.get("result")) : Map.of();
-    }
-    
-    /**
-     * Get the MCP content list from one JSON-RPC payload.
-     *
-     * @param payload JSON-RPC payload
-     * @return content list, or empty list if absent
-     */
-    public static List<Map<String, Object>> getResultContents(final Map<String, Object> payload) {
-        List<Map<String, Object>> result = castToList(getJsonRpcResult(payload).get("content"));
-        return null == result ? List.of() : result;
+    public static Map<String, Object> getRequiredJsonRpcResult(final Map<String, Object> payload) {
+        if (hasJsonRpcError(payload)) {
+            throw new IllegalStateException("MCP JSON-RPC request failed: " + getJsonRpcErrorPayload(payload).get("message"));
+        }
+        return getRequiredObject(payload, "result");
     }
     
     /**
@@ -88,7 +82,12 @@ public final class MCPInteractionPayloads {
      * @return normalized result or error payload
      */
     public static Map<String, Object> getListResourcesPayload(final Map<String, Object> payload) {
-        return hasJsonRpcError(payload) ? getJsonRpcErrorPayload(payload) : getJsonRpcResult(payload);
+        if (hasJsonRpcError(payload)) {
+            return getJsonRpcErrorPayload(payload);
+        }
+        Map<String, Object> result = getRequiredJsonRpcResult(payload);
+        getRequiredObjectList(result, "resources");
+        return result;
     }
     
     /**
@@ -96,17 +95,21 @@ public final class MCPInteractionPayloads {
      *
      * @param payload JSON-RPC payload
      * @return structured content or normalized error payload
+     * @throws IllegalStateException when tools/call response omits required content
      */
-    public static Map<String, Object> getStructuredContent(final Map<String, Object> payload) {
+    public static Map<String, Object> getToolCallPayload(final Map<String, Object> payload) {
         if (hasJsonRpcError(payload)) {
             return getJsonRpcErrorPayload(payload);
         }
-        Map<String, Object> result = getJsonRpcResult(payload);
-        if (result.containsKey("structuredContent")) {
-            return castToMap(result.get("structuredContent"));
+        Map<String, Object> result = getRequiredJsonRpcResult(payload);
+        List<Map<String, Object>> contents = getRequiredObjectList(result, "content");
+        if (Boolean.TRUE.equals(result.get("isError"))) {
+            if (contents.isEmpty() || !"text".equals(contents.getFirst().get("type"))) {
+                throw new IllegalStateException("MCP tool error must include JSON text content.");
+            }
+            return parseJsonText(getRequiredString(contents.getFirst(), "text"));
         }
-        List<Map<String, Object>> contents = getResultContents(payload);
-        return contents.isEmpty() ? Map.of() : parseJsonText(contents.get(0).get("text"));
+        return getRequiredObject(result, "structuredContent");
     }
     
     /**
@@ -114,13 +117,17 @@ public final class MCPInteractionPayloads {
      *
      * @param payload JSON-RPC payload
      * @return first parsed resource payload or normalized error payload
+     * @throws IllegalStateException when the resource content is absent or malformed
      */
     public static Map<String, Object> getFirstResourcePayload(final Map<String, Object> payload) {
         if (hasJsonRpcError(payload)) {
             return getJsonRpcErrorPayload(payload);
         }
-        List<Map<String, Object>> contents = castToList(getJsonRpcResult(payload).get("contents"));
-        return null == contents || contents.isEmpty() ? Map.of() : parseJsonText(contents.get(0).get("text"));
+        List<Map<String, Object>> contents = getRequiredObjectList(getRequiredJsonRpcResult(payload), "contents");
+        if (contents.isEmpty()) {
+            throw new IllegalStateException("MCP payload field `contents` must include at least one resource.");
+        }
+        return parseJsonText(getRequiredString(contents.getFirst(), "text"));
     }
     
     /**
@@ -134,30 +141,80 @@ public final class MCPInteractionPayloads {
     }
     
     /**
-     * Cast one value to a string-object map.
+     * Get a required object field.
      *
-     * @param value raw value
-     * @return converted map
+     * @param payload parent payload
+     * @param fieldName field name
+     * @return object field
+     * @throws IllegalStateException when the field is absent or is not an object
      */
-    public static Map<String, Object> castToMap(final Object value) {
-        return OBJECT_MAPPER.convertValue(value, new TypeReference<>() {
-        });
+    public static Map<String, Object> getRequiredObject(final Map<String, Object> payload, final String fieldName) {
+        return getRequiredObjectValue(payload.get(fieldName), fieldName);
     }
     
     /**
-     * Cast one value to a list of string-object maps.
+     * Get a required object value.
      *
      * @param value raw value
-     * @return converted list
+     * @param fieldPath field path for diagnostics
+     * @return object value
+     * @throws IllegalStateException when the value is not an object
      */
-    public static List<Map<String, Object>> castToList(final Object value) {
-        return OBJECT_MAPPER.convertValue(value, new TypeReference<>() {
-        });
+    @SuppressWarnings("unchecked")
+    public static Map<String, Object> getRequiredObjectValue(final Object value, final String fieldPath) {
+        if (!(value instanceof Map)) {
+            throw new IllegalStateException(String.format("MCP payload field `%s` must be an object.", fieldPath));
+        }
+        return (Map<String, Object>) value;
     }
     
-    private static Map<String, Object> parseJsonText(final Object value) {
+    /**
+     * Get a required object-list field.
+     *
+     * @param payload parent payload
+     * @param fieldName field name
+     * @return object-list field
+     * @throws IllegalStateException when the field is absent, is not a list, or contains a non-object value
+     */
+    public static List<Map<String, Object>> getRequiredObjectList(final Map<String, Object> payload, final String fieldName) {
+        return getRequiredObjectList(payload.get(fieldName), fieldName);
+    }
+    
+    /**
+     * Get a required object-list value.
+     *
+     * @param value raw value
+     * @param fieldPath field path for diagnostics
+     * @return object-list value
+     * @throws IllegalStateException when the value is not a list or contains a non-object value
+     */
+    @SuppressWarnings("unchecked")
+    public static List<Map<String, Object>> getRequiredObjectList(final Object value, final String fieldPath) {
+        if (!(value instanceof List)) {
+            throw new IllegalStateException(String.format("MCP payload field `%s` must be a list.", fieldPath));
+        }
+        List<?> values = (List<?>) value;
+        for (int index = 0; index < values.size(); index++) {
+            getRequiredObjectValue(values.get(index), fieldPath + "[" + index + "]");
+        }
+        return (List<Map<String, Object>>) values;
+    }
+    
+    /**
+     * Get an optional object-list field.
+     *
+     * @param payload parent payload
+     * @param fieldName field name
+     * @return object-list field, or an empty list when absent
+     * @throws IllegalStateException when the present field is not a list or contains a non-object value
+     */
+    public static List<Map<String, Object>> getOptionalObjectList(final Map<String, Object> payload, final String fieldName) {
+        return payload.containsKey(fieldName) ? getRequiredObjectList(payload, fieldName) : List.of();
+    }
+    
+    private static Map<String, Object> parseJsonText(final String value) {
         try {
-            return OBJECT_MAPPER.readValue(String.valueOf(value), new TypeReference<>() {
+            return OBJECT_MAPPER.readValue(value, new TypeReference<>() {
             });
         } catch (final IOException ex) {
             throw new IllegalStateException("Failed to parse MCP JSON text payload.", ex);
@@ -165,15 +222,27 @@ public final class MCPInteractionPayloads {
     }
     
     private static Map<String, Object> createJsonRpcErrorPayload(final Object rawError) {
-        Map<String, Object> error = castToMap(rawError);
-        return Map.of(
-                "error_code", "json_rpc_error",
-                "message", String.valueOf(error.getOrDefault("message", "Unknown JSON-RPC error.")));
+        Map<String, Object> error = getRequiredObjectValue(rawError, "error");
+        Object rawData = error.get("data");
+        Map<String, Object> data = rawData instanceof Map ? getRequiredObjectValue(rawData, "error.data") : Map.of();
+        Map<String, Object> result = new LinkedHashMap<>(data.size() + 2, 1F);
+        result.putAll(data);
+        result.put("error_code", "json_rpc_error");
+        result.put("message", String.valueOf(error.getOrDefault("message", "Unknown JSON-RPC error.")));
+        return result;
+    }
+    
+    private static String getRequiredString(final Map<String, Object> payload, final String fieldName) {
+        Object value = payload.get(fieldName);
+        if (!(value instanceof String)) {
+            throw new IllegalStateException(String.format("MCP payload field `%s` must be a string.", fieldName));
+        }
+        return (String) value;
     }
     
     private static String normalizeJsonBody(final String responseBody) {
         String result = responseBody.trim();
-        if (result.startsWith("{") || result.startsWith("[")) {
+        if (result.startsWith("{")) {
             return result;
         }
         StringBuilder stringBuilder = new StringBuilder();
